--- a/ᏩᎶᏏ.mw
+++ b/ᏩᎶᏏ.mw
@@ -19,7 +19,7 @@
 [[Neobatrachia]] <br /> - <br />
 [[List of Anuran families|ᏙᎪᏩᎸ  Anuran ᎯᎸᏍᎩ ᎢᏯᏓᏁᎸ]]
 }}
-ᎯᎠ '''ᏩᎶᏏ''' ᎨᏒᎢ [[amphibian]] ᎭᏫᎾᏗᏢ ᎯᎠ ᎠᏓᏅᏍᏗ '''Anura''' (ᎦᏛᎬᎢ "ᎦᏂᏓᏛ-ᎦᏲᎵᎨ" ᏂᏛᎴᏅᏓ ᎠᎪᎢ ''-,'' ᏄᏠᏯᏍᏛᎾ + ''oura'', ᎦᏂᏓᏛ). ᎤᏔᎾ ᏩᎶᏏ ᎠᎴ characterized ᎾᎥᎢ ᎦᏅᎯᏓ ᎣᏂᏗᏢ ᏗᏂᏅᏍᎨᏂ, ᏍᏆᎳᎢ ᎠᏰᎸ, webbed ᏎᏍᏗ, protruding [[eye|ᎠᎦᏙᎵ]] ᎠᎴ ᎯᎠ ᏅᏙᎲᏅ [[tail|ᎦᏂᏓᏛ]]. ᎤᎪᏗᏗ ᏩᎶᏏ ᎤᎭ ᏴᎩ-aquatic lifestyle, ᎠᎴ ᎠᏓᏅᏍᏗ ᎠᎯᏗᎨᎢ ᎾᎿ ᎦᏙᎯ ᎾᎥᎢ ᏓᎵᏔᏕᎬ ᎠᎴ ᏥᎵᎱ. ᎤᏅᏌ ᎢᏯᏛᏁᎵᏓᏍᏗ ᎠᏠᏗ ᎤᎾᏤᎵ [[Egg (biology)|ᎤᏪᏥ]] ᎭᏫᎾᏗᏢ ᎥᏓᎵ, [[pond|ᎥᏓᎵ]] ᎠᎴ [[lake|ᎥᏓᎵ]], ᎠᎴ ᎤᎾᏤᎵ [[larva|ᎠᏲᎵe]], ᎤᏯᏅᎲ [[tadpole|ᏖᎦ]], ᎤᎭ [[gill|ᎪᏍᏓᏱ]] ᎠᎴ ᎤᏙᎷᏬᏗ ᎭᏫᎾᏗᏢ ᎠᎹ. ᎤᏔᎾ ᏩᎶᏏ ᎠᏍᏓᏩᏛᏍᏗ [[carnivore|ᎠᎵᏍᏓᏴᏗ]] ᎠᎵᏍᏓᏴᏗ, ᎾᏍᎩ ᎤᎪᏗᏗ [[arthropod]], [[annelid]] ᎠᎴ [[Gastropoda|gastropod]]. ᏩᎶᏏ ᎠᎴ ᎤᎪᏗᏗ noticeable ᏗᎬᏩᎶᏒ ᎤᎾᏤᎵ ᎤᏯᏅᏛ, ᎦᏙ ᎤᏍᏗ ᏰᎵᏇ ᎾᏍᏋ ᏂᎬᎢ ᎤᎾᏛᎦᏅ ᎾᎯᏳᎨᏒ ᎯᎠ [[estrus cycle|ᎠᏯᏖᏃ ᎦᏅᏗ ᎢᏳ ᎤᏕᏘᏴᏌᏗᏒ]].
+ᎯᎠ '''ᏩᎶᏏ''' ᎨᏒᎢ [[amphibian]] ᎭᏫᎾᏗᏢ ᎯᎠ ᎠᏓᏅᏍᏗ '''Anura''' (ᎦᏛᎬᎢ "ᎦᏂᏓᏛ-ᎦᏲᎵᎨ" ᏂᏛᎴᏅᏓ ᎠᎪᎢ ''-,'' ᏄᏠᏯᏍᏛᎾ + ''oura'', ᎦᏂᏓᏛ). ᎤᏔᎾ ᏩᎶᏏ ᎠᎴ characterized ᎾᎥᎢ ᎦᏅᎯᏓ ᎣᏂᏗᏢ ᏗᏂᏅᏍᎨᏂ, ᏍᏆᎳᎢ ᎠᏰᎸ, webbed ᏎᏍᏗ, protruding [[eye|ᎠᎦᏙᎵ]] ᎠᎴ ᎯᎠ ᏅᏙᎲᏅ [[tail|ᎦᏂᏓᏛ]]. ᎤᎪᏗᏗ ᏩᎶᏏ ᎤᎭ ᏴᎩ-aquatic lifestyle, ᎠᎴ ᎠᏓᏅᏍᏗ ᎠᎯᏗᎨᎢ ᎾᎿ ᎦᏙᎯ ᎾᎥᎢ ᏓᎵᏔᏕᎬ ᎠᎴ ᏥᎵᎱ. ᎤᏅᏌ ᎢᏯᏛᏁᎵᏓᏍᏗ ᎠᏠᏗ ᎤᎾᏤᎵ [[Egg (biology)|ᎤᏪᏥ]] ᎭᏫᎾᏗᏢ ᎥᏓᎵ, [[pond|ᎥᏓᎵ]] ᎠᎴ [[lake|ᎥᏓᎵ]], ᎠᎴ ᎤᎾᏤᎵ [[larvae]], ᎤᏯᏅᎲ [[tadpole|ᏖᎦ]], ᎤᎭ [[gill|ᎪᏍᏓᏱ]] ᎠᎴ ᎤᏙᎷᏬᏗ ᎭᏫᎾᏗᏢ ᎠᎹ. ᎤᏔᎾ ᏩᎶᏏ ᎠᏍᏓᏩᏛᏍᏗ [[carnivore|ᎠᎵᏍᏓᏴᏗ]] ᎠᎵᏍᏓᏴᏗ, ᎾᏍᎩ ᎤᎪᏗᏗ [[arthropod]], [[annelid]] ᎠᎴ [[Gastropoda|gastropod]]. ᏩᎶᏏ ᎠᎴ ᎤᎪᏗᏗ noticeable ᏗᎬᏩᎶᏒ ᎤᎾᏤᎵ ᎤᏯᏅᏛ, ᎦᏙ ᎤᏍᏗ ᏰᎵᏇ ᎾᏍᏋ ᏂᎬᎢ ᎤᎾᏛᎦᏅ ᎾᎯᏳᎨᏒ ᎯᎠ [[estrus cycle|ᎠᏯᏖᏃ ᎦᏅᏗ ᎢᏳ ᎤᏕᏘᏴᏌᏗᏒ]].
 
 ᎯᎠ ᏗᏗᎦᎴᏴ ᏩᎶᏏ ᎠᏍᏓᏅᏅ ᏂᏛᎴᏅᏓ [[tropics|tropic]] [[subarctic]] ᎤᏔᏂᏗ ᎦᏙᎯ, ᎬᏙᏗ ᎤᎪᏗᏗ ᎯᎠ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᎠᏩᏛᏗ ᎭᏫᎾᏗᏢ [[tropical rainforest|ᎤᎦᎾᏭ rainforest]]. ᎬᏙᏗ ᎦᏬᎯᎸᏙᏗ 5,000 ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᏄᏍᏛ ᎧᏃᎮᎸ, ᎤᏅᏌ ᎠᎴ ᏄᎾᏛᏅ ᎯᎠ ᎤᎪᏗᏗ ᏧᏓᎴᎿᎢ ᏚᎾᏓᏟᏌᎲ [[vertebrate]]. ᏱᏂᎬᏛᎾ ᎯᎠ [[Decline in amphibian populations]] ᎤᏙᎯᏳ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᏩᎶᏏ ᎠᎴ ᎧᏁᏉᏤᎩ ᎠᎾᏓᏁᎲ ᏂᎬᏂᏏᏍᎬ ᎾᏍᎩᎾᎢ ᎤᏃᏝᎩ.
 
@@ -31,9 +31,9 @@
 
 ᎯᎠ ᎬᏙᏗ ᎯᎠ ᏧᏣᏔᏊ ᏚᎾᏙᎥ "ᏩᎶᏏ" ᎠᎴ "ᏩᎶᏏ" ᎤᎭ Ꮭ taxonomic ᎦᎴᏴᏗᏍᎬᎢ. ᏂᏛᎴᏅᏓ taxonomic ᎦᎾᏄᎪᏨᎢ, ᏂᎦᏛ ᎠᏁᎳ ᎯᎠ ᎠᏓᏅᏍᏗ Anura ᎠᎴ ᏩᎶᏏ, ᎠᎴ ᎾᏍᎩ ᎤᏩᏒ ᎠᏁᎳ ᎯᎠ ᏏᏓᏁᎸᎯ Bufonidae ᎠᎴ ᎠᎦᏎᏍᏔᏅ "ᎤᏙᎯᏳ ᏩᎶᏏ". ᎯᎠ ᎬᏙᏗ ᎯᎠ ᎠᎴᏂᏍᎬ "ᏩᎶᏏ" ᎭᏫᎾᏗᏢ ᏧᏣᏔᏊ ᏚᎾᏙᎥ ᎤᏠᏱᎭ ᏩᏎᎯᎰᎢ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ Ꮎ ᎠᎴ aquatic ᎠᎴ ᏴᎩ-aquatic ᎬᏙᏗ ᎤᏩᎾᏕᏍᎩ ᎠᎴ ᎦᏚᎵᏓ ᎦᏁᎦ, ᎠᎴ ᎯᎠ ᎠᎴᏂᏍᎬ "ᏩᎶᏏ" ᏂᎦᎥᏊ ᏩᏎᎯᎰᎢ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ Ꮎ ᏫᏚᏳᎪᏛ ᎾᏍᏋ ᎡᎶᎯ ᎬᏙᏗ ᎤᎧᏲᏗ, warty ᎦᏁᎦ. ᏓᎦᏘᎴᎬ ᎨᏒᎢ ᎯᎠ [[Fire-bellied toad|ᎠᏥᎸ-ᏂᎯ ᏩᎶᏏ]] (''Bombina bombina''): ᎾᎯᏳᎢ Ꮝ ᎦᏁᎦ ᎨᏒᎢ ᎠᏍᏓᏩᏛᏍᏗ warty, ᎾᏍᎩ ᎤᏟ ᎬᏰᎸᏗ ᎠᎹ ᏗᎦᎶᎪᏗ.
 
-ᏩᎶᏏ ᎠᎴ ᏩᎶᏏ ᎠᎴ ᎠᏯᏖᎾ classified ᎾᎾᎯ ᏦᎢ suborders: [[Archaeobatrachia]], ᎦᏙ ᎤᏍᏗ ᎠᏠᏯᏍᏗ ᏅᎩ ᎯᎸᏍᎩ ᎢᏯᏓᏁᎸ ᎠᏓᎴᏂᏍᎬ ᏩᎶᏏ; [[Mesobatrachia]], ᎦᏙ ᎤᏍᏗ ᎠᏠᏯᏍᏗ ᎯᏍᎩ ᎯᎸᏍᎩ ᎢᏯᏓᏁᎸ ᎤᏟ ᎢᎦᎢ evolutionary ᎤᏁᎫᏥᏛ ᏩᎶᏏ; ᎠᎴ [[Neobatrachia]], ᎾᎥᎢ ᎢᏅ ᎯᎠ ᎤᏔᏂᎢᏍᏗ ᎤᎾᏓᏟᏌᎲ, ᎦᏙ ᎤᏍᏗ ᎢᎦᎢ ᎨᏐ ᎯᎠ ᏩᎵᏃᎯᏯᏍᎬ 24 ᎯᎸᏍᎩ ᎢᏯᏓᏁᎸ "ᎪᎯᏊ ᎢᏴ ᏥᎩ" ᏩᎶᏏ, ᎠᏠᏯᏍᏗᏍᎩ ᎤᎪᏗᏗ ᏧᏣᏔᏊ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᏂᎦᏅᎯᏒ ᎯᎠ ᎡᎶᎯ. ᎯᎠ Neobatrachia ᎨᏒᎢ ᎤᏗᏗᏢ ᎤᏂᏯᏙᎸ ᎾᎾᎯ ᎯᎠ Hyloidea ᎠᎴ Ranoidea.<ref>Ford, L.S.| coauthors=D.C. Cannatella| year=1993| title=The major clades of frogs| journal=Herpetological Monographs| volume=7| pages=94-117</ref> ᎪᎯ ᏗᏓᎴᎾᏔᏅ ᏗᎦᏘᏌᏅᎩ ᎨᏒᎢ ᏚᎳᏏᏔᏅᎩ ᎾᎿ ᏯᏛᎿ morphological ᏄᏍᏛ ᏗᎨᎦᏃᏗ ᏥᏄᏍᏗ ᎯᎠ ᏎᏍᏗ vertebrae, ᎯᎠ ᎠᏛᎯᏍᏙᏗ ᎯᎠ [[pectoral girdle|pectoral ᏕᎬᏔᏛ]], ᎠᎴ ᎯᎠ ᎤᎾᏙᏢᎯ ᏖᎦ.  ᎾᎯᏳᎢ ᎪᎯ ᏗᏓᎴᎾᏔᏅ ᏗᎦᏘᏌᏅᎩ ᎨᏒᎢ ᎡᏆᏯ accepted, ᎠᎾᎵᏐᏈᎸᏍᎬ ᏄᎾᏛᏅ ᎯᎸᏍᎩ ᎢᏯᏓᏁᎸ ᏩᎶᏏ ᎠᎴ ᏙᎢ debated. ᎤᏩᎫᏗᏗᏒ ᏗᎦᏎᏍᏙᏗ [[molecular genetics|ᎠᏍᏓᏩᏛᏍᏗ ᎠᏛᎯᏍᏙᏗ]] ᎢᏳᏗᎾ ᏄᎵᏍᏛ ᎠᏓᏁᎳᏁᏗ ᎤᏗᏗᏢ ᎥᎦᏔᎲᎢ ᎯᎠ evolutionary ᎠᎾᎵᏐᏈᎸᏍᎬ ᏄᎾᏛᏅ ᏩᎶᏏ ᎯᎸᏍᎩ ᎢᏯᏓᏁᎸ.<ref>Faivovich, J.| coauthors=C.F.B. Haddad, P.C.A. Garcia, D.R. Frost, J.A. Campbell, and W.C. Wheeler| title=Systematic review of the frog family Hylidae, with special reference to Hylinae: Phylogenetic analysis and taxonomic revision| journal=Bulletin of the American Museum of Natural History| volume=294| pages=1-240}}</ref>
+ᏩᎶᏏ ᎠᎴ ᏩᎶᏏ ᎠᎴ ᎠᏯᏖᎾ classified ᎾᎾᎯ ᏦᎢ suborders: [[Archaeobatrachia]], ᎦᏙ ᎤᏍᏗ ᎠᏠᏯᏍᏗ ᏅᎩ ᎯᎸᏍᎩ ᎢᏯᏓᏁᎸ ᎠᏓᎴᏂᏍᎬ ᏩᎶᏏ; [[Mesobatrachia]], ᎦᏙ ᎤᏍᏗ ᎠᏠᏯᏍᏗ ᎯᏍᎩ ᎯᎸᏍᎩ ᎢᏯᏓᏁᎸ ᎤᏟ ᎢᎦᎢ evolutionary ᎤᏁᎫᏥᏛ ᏩᎶᏏ; ᎠᎴ [[Neobatrachia]], ᎾᎥᎢ ᎢᏅ ᎯᎠ ᎤᏔᏂᎢᏍᏗ ᎤᎾᏓᏟᏌᎲ, ᎦᏙ ᎤᏍᏗ ᎢᎦᎢ ᎨᏐ ᎯᎠ ᏩᎵᏃᎯᏯᏍᎬ 24 ᎯᎸᏍᎩ ᎢᏯᏓᏁᎸ "ᎪᎯᏊ ᎢᏴ ᏥᎩ" ᏩᎶᏏ, ᎠᏠᏯᏍᏗᏍᎩ ᎤᎪᏗᏗ ᏧᏣᏔᏊ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᏂᎦᏅᎯᏒ ᎯᎠ ᎡᎶᎯ. ᎯᎠ Neobatrachia ᎨᏒᎢ ᎤᏗᏗᏢ ᎤᏂᏯᏙᎸ ᎾᎾᎯ ᎯᎠ Hyloidea ᎠᎴ Ranoidea.<ref>Ford, L.S.| coauthors=D.C. Cannatella| year=1993| title=The major clades of frogs| journal=Herpetological Monographs| volume=7| pages=94-117</ref> ᎪᎯ ᏗᏓᎴᎾᏔᏅ ᏗᎦᏘᏌᏅᎩ ᎨᏒᎢ ᏚᎳᏏᏔᏅᎩ ᎾᎿ ᏯᏛᎿ morphological ᏄᏍᏛ ᏗᎨᎦᏃᏗ ᏥᏄᏍᏗ ᎯᎠ ᏎᏍᏗ vertebrae, ᎯᎠ ᎠᏛᎯᏍᏙᏗ ᎯᎠ [[pectoral girdle|pectoral ᏕᎬᏔᏛ]], ᎠᎴ ᎯᎠ ᎤᎾᏙᏢᎯ ᏖᎦ.  ᎾᎯᏳᎢ ᎪᎯ ᏗᏓᎴᎾᏔᏅ ᏗᎦᏘᏌᏅᎩ ᎨᏒᎢ ᎡᏆᏯ accepted, ᎠᎾᎵᏐᏈᎸᏍᎬ ᏄᎾᏛᏅ ᎯᎸᏍᎩ ᎢᏯᏓᏁᎸ ᏩᎶᏏ ᎠᎴ ᏙᎢ debated. ᎤᏩᎫᏗᏗᏒ ᏗᎦᏎᏍᏙᏗ [[molecular genetics|ᎠᏍᏓᏩᏛᏍᏗ ᎠᏛᎯᏍᏙᏗ]] ᎢᏳᏗᎾ ᏄᎵᏍᏛ ᎠᏓᏁᎳᏁᏗ ᎤᏗᏗᏢ ᎥᎦᏔᎲᎢ ᎯᎠ evolutionary ᎠᎾᎵᏐᏈᎸᏍᎬ ᏄᎾᏛᏅ ᏩᎶᏏ ᎯᎸᏍᎩ ᎢᏯᏓᏁᎸ.<ref>Faivovich, J., C.F.B. Haddad, P.C.A. Garcia, D.R. Frost, J.A. Campbell, ᎠᎴ W.C. Wheeler. "Systematic review of the frog family Hylidae, with special reference to Hylinae: Phylogenetic analysis ᎠᎴ taxonomic revision." ''Bulletin of the American Museum of Natural History.'' Volume 294: 1-240.</ref>
 
-ᎢᎦᏛ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ anurans [[hybrid|ᏧᏠᎯᏍᏗise]] ᎢᏳᏊ ᏱᏂᎦᎳᏍᏗ. ᎾᏍᎩᎾᎢ ᏄᎵᏍᏛ, ᎯᎠ [[Edible Frog|ᎠᎵᏍᏓᏴᏗ ᏩᎶᏏ]] (''Rana esculenta'') ᎨᏒᎢ ᏧᏠᎯᏍᏗ ᎯᎠ [[Pool Frog|ᎦᏁᎲ ᏩᎶᏏ]] (''R. lessonae'') ᎠᎴ ᎯᎠ [[Marsh Frog|ᎤᎯᏌᏛ ᏩᎶᏏ]] (''R. ridibunda''). ''Bombina bombina'' ᎠᎴ ''Bombina variegata'' ᎤᏠᏱ ᎤᏙᏢᏒ ᏧᏠᎯᏍᏗ, ᎾᏍᎩ ᎤᏁᎳᎩ ᎾᏍᎩ ᎯᎠ ᎠᎴ ᎦᏲᎵᎨ utvhisdi, ᎠᎾᏓᏁᎲ ᎤᎵᏌᎳᏙᏗ [[hybrid zone|ᏧᏠᎯᏍᏗ ᎡᎶᎯ ᎠᏍᏓᏅᏅ]].
+ᎢᎦᏛ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ anurans [[hybrid|ᏧᏠᎯᏍᏗise]] ᎢᏳᏊ ᏱᏂᎦᎳᏍᏗ. ᎾᏍᎩᎾᎢ ᏄᎵᏍᏛ, ᎯᎠ [[Edible Frog|ᎠᎵᏍᏓᏴᏗ ᏩᎶᏏ]] (''Rana esculenta'') ᎨᏒᎢ ᏧᏠᎯᏍᏗ ᎯᎠ [[Pool Frog|ᎦᏁᎲ ᏩᎶᏏ]] (''R. lessonae'') ᎠᎴ ᎯᎠ [[Marsh Frog|ᎤᎯᏌᏛ ᏩᎶᏏ]] (''R. ridibunda''). ''Bombina bombina'' ᎠᎴ ''Bombina variegata'' ᎤᏠᏱ ᎤᏙᏢᏒ ᏧᏠᎯᏍᏗ, ᎾᏍᎩ ᎤᏁᎳᎩ ᎾᏍᎩ ᎯᎠ ᎠᎴ ᎦᏲᎵᎨ [[fertile|ᎤᏛᎯᏍᏗ]], ᎠᎾᏓᏁᎲ ᎤᎵᏌᎳᏙᏗ [[hybrid zone|ᏧᏠᎯᏍᏗ ᎡᎶᎯ ᎠᏍᏓᏅᏅ]].
 
 == ᎤᎾᏙᏢᎯ ᎠᎴ ᎤᎾᏙᏢᎯ ==
 [[File:Rana_skeleton.png|thumb|ᏩᎵᏃᎯᏯᏍᎬ  ''Rana'']]
@@ -41,7 +41,7 @@
 
 ᎤᎪᏗᏗ ᎨᎦᏓᏅᏖᏗ ᎠᎴ ᎾᏍᎩ ᏂᎨᏒᎾ shared ᎾᎥᎢ ᏂᎦᏛ ᎯᎠ ᎾᎥᏂᎨᏍᏙᏗᏇ 5,250 ᏄᏍᏛ ᎧᏃᎮᎸ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᏩᎶᏏ. ᏱᏂᎬᏛᎾ, ᎢᎦᏛ ᏂᎦᎥ ᎨᎦᏓᏅᏖᏗ ᎠᎪᏩᏛᏗ ᎠᏂ ᏂᏛᎴᏅᏓ ᏐᎢ amphibians. ᏩᎶᏏ ᎠᎴ ᎤᏠᏱᎭ ᎠᏔᎴᏒ ᎠᎹᏱ ᏧᎾᏙᎳᏨ ᏓᎵᏔᏕᎬ, ᎬᏙᏗ ᎦᏅᎯᏓ ᎣᏂᏗᏢ ᏗᏂᏅᏍᎨᏂ ᎬᏙᏗ elongated ᎤᏣᏍᏆᎳᏛ ᎤᎵᏬᏨᎯ. ᎤᏅᏌ ᎤᎭ ᏍᏆᎳᎢ ᎠᏰᎵ ᎤᏓᏅᏅ, ᎬᏙᏗ Ꮭ ᎤᏟ ᎢᎦᎢ ᎬᎾᏬᏍᎬ ᏍᎪᎯ ᎠᏎᏊᎢ vertebrae, ᎠᏍᏓᏩᏛᏓ ᎾᎥᎢ fused tailbone (''urostyle'' ᎠᎴ ''coccyx''), ᎢᏯᏛᏁᎵᏓᏍᏗ ᏄᎵᏍᏔᏅ ᎭᏫᎾᏗᏢ tailless phenotype. 
 
-ᏩᎶᏏ ᎠᏍᏓᏅᏅ ᎭᏫᎾᏗᏢ ᏂᎬᎢ ᏂᏛᎴᏅᏓ 10&nbsp;mm (''[[Psyllophryne didactyla]]'' [[Brazil]] ᎠᎴ ''[[Eleutherodactylus iberia]]'' [[Cuba]]) 300&nbsp;mm ([[Goliath frog|ᏄᎵᏂᎬᎬ ᏩᎶᏏ]], ''Conraua ᏄᎵᏂᎬᎬ'', [[Cameroon]]). ᎯᎠ ᎦᏁᎦ ᎦᏛᏗ ᏗᏲᏒᎯ ᎾᎿ ᎯᎠ ᎠᏰᎸ ᎢᎬᏂᏏᏍᎩ ᎯᎠ ᎦᎷᎶᎩ [[loose connective tissue|ᏗᏲᏒᎯ ᏕᎬᏔᏛ ᏂᎦᏛ]]. ᎦᏁᎦ ᎦᏅᏙᎬ varies: ᎾᏍᎩ ᏰᎵᏇ ᎾᏍᏋ ᎤᏩᎾᏕᏍᎩ, warty ᎠᎴ ᎦᏇᏅᏗ. ᏩᎶᏏ ᎤᎭ ᏦᎢ eyelid ᏫᏚᏳᎪᏛ: ᏌᏊ ᎨᏒᎢ ᎤᎸᏑᏘ ᎠᏓᏍᏕᎸᏗ ᎯᎠ digatoli underwater, ᎠᎴ ᏔᎵ ᏧᏓᎴᎾᎯ ᏂᏛᎴᏅᏓ ᎠᏓᎨᏗ ᎤᎳᏏᎬᎢ. ᏩᎶᏏ ᎤᎭ [[tympanum|ᎦᏚᎢ]] ᎾᎿ ᎠᏂᏏᏴᏫᎭ ᎠᏍᏆᎨᏂ ᎯᎠ ᎠᏍᎪᎵ, ᎦᏙ ᎤᏍᏗ ᎨᏒᎢ ᎤᏠᏯᏍᏔᏅ ᎭᏫᎾᏗᏢ ᎠᏛᎩᏍᎬ ᎠᎴ, ᎭᏫᎾᏗᏢ ᎢᎦᏛ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ, ᎨᏒᎢ ᎫᏝᎢ ᎾᎥᎢ ᎦᏁᎦ.
+ᏩᎶᏏ ᎠᏍᏓᏅᏅ ᎭᏫᎾᏗᏢ ᏂᎬᎢ ᏂᏛᎴᏅᏓ 10&nbsp;mm (''[[Psyllophryne didactyla]]'' [[Brazil]] ᎠᎴ ''[[Eleutherodactylus iberia]]'' [[Cuba]]) 300&nbsp;mm ([[Goliath frog|ᏄᎵᏂᎬᎬ ᏩᎶᏏ]], ''Conraua ᏄᎵᏂᎬᎬ'', [[Cameroon]]). ᎯᎠ ᎦᏁᎦ ᎦᏛᏗ ᏗᏲᏒᎯ ᎾᎿ ᎯᎠ ᎠᏰᎸ ᎢᎬᏂᏏᏍᎩ ᎯᎠ ᎦᎷᎶᎩ [[loose connective tissue|ᏗᏲᏒᎯ ᏕᎬᏔᏛ ᏂᎦᏛ]]. ᎦᏁᎦ ᎦᏅᏙᎬ varies: ᎾᏍᎩ ᏰᎵᏇ ᎾᏍᏋ ᎤᏩᎾᏕᏍᎩ, warty ᎠᎴ ᎦᏇᏅᏗ. ᏩᎶᏏ ᎤᎭ ᏦᎢ eyelid ᏫᏚᏳᎪᏛ: ᏌᏊ ᎨᏒᎢ ᎤᎸᏑᏘ ᎠᏓᏍᏕᎸᏗ ᎯᎠ ᏗᎦᏙᎵ underwater, ᎠᎴ ᏔᎵ ᏧᏓᎴᎾᎯ ᏂᏛᎴᏅᏓ ᎠᏓᎨᏗ ᎤᎳᏏᎬᎢ. ᏩᎶᏏ ᎤᎭ [[tympanum|ᎦᏚᎢ]] ᎾᎿ ᎠᏂᏏᏴᏫᎭ ᎠᏍᏆᎨᏂ ᎯᎠ ᎠᏍᎪᎵ, ᎦᏙ ᎤᏍᏗ ᎨᏒᎢ ᎤᏠᏯᏍᏔᏅ ᎭᏫᎾᏗᏢ ᎠᏛᎩᏍᎬ ᎠᎴ, ᎭᏫᎾᏗᏢ ᎢᎦᏛ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ, ᎨᏒᎢ ᎫᏝᎢ ᎾᎥᎢ ᎦᏁᎦ.
 
 === ᏧᎾᎳᏏᏕᎾ ᎠᎴ ᏗᏂᏅᏍᎨᏂ ===
 [[File:Litoria tyleri.jpg|thumb|190px|left|[[Tyler's Tree Frog|Tyler ᎤᏤᎵ ᏡᎬ ᏩᎶᏏ]] (''Litoria tyleri'') ᏗᏟᎶᏍᏙᏗ ᎡᏆ ᎧᎾᏌᏛ ᏗᏯᎦᎸᏗ ᎠᎴ webbed ᏧᎾᎳᏏᏕᎾ.]]
@@ -49,9 +49,9 @@
 
 ᎤᎪᏗᏗ ᏩᎶᏏ, ᎾᏍᎩ ᎨᏒᎢ ᎾᏍᎩ Ꮎ ᎠᎴᏂᏓᏍᏗ ᎭᏫᎾᏗᏢ ᎠᎹ, ᎤᎭ webbed ᎧᎾᏌᏛ. ᎯᎠ ᎢᎦᎢ ᎢᎦᏘ ᎦᏙ ᎤᏍᏗ ᎯᎠ ᎧᎾᏌᏛ ᎠᎴ webbed ᎨᏒᎢ ᎾᎿ ᎢᏴ ᎠᎾᎵᏐᏈᎸᏍᎬ ᎯᎠ ᎢᎦᎢ ᎨᏒ [[time|ᎢᏳᏩᎪᏗ]] ᎯᎠ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᎠᎴᏂᏙᎠ ᎭᏫᎾᏗᏢ ᎯᎠ ᎠᎹ. ᎾᏍᎩᎾᎢ ᏱᏓᏟᎶᏍᏔᏅ, ᎯᎠ ᎠᎧᎵᏬᎯ aquatic [[African dwarf frog|African ᎠᎦᏲᎳᏗᏍᏗ ᏩᎶᏏ]] (''Hymenochirus sp.'') ᎤᎭ ᎠᏂᎧᎵ webbed ᎧᎾᏌᏛ, ᎠᎦᏎᏍᏙᏗ ᎯᎠ ᎧᎾᏌᏛ [[White's Tree Frog|ᎤᏁᎬ ᎤᏤᎵ ᏡᎬ ᏩᎶᏏ]], arboreal ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ, ᎠᎴ ᎾᏍᎩ ᎤᏩᏒ ᎠᏰᎵ ᎢᏴ ᎠᎴ ᎩᏄᏙᏗ webbed.
 
-[[Tree frog|Arboreal ᏩᎶᏏ]] ᎤᎭ "ᎧᎾᏌᏛ ᏗᏯᎦᎸᏗ" ᎠᎵᏍᏕᎸᏗ ᎦᏂᏴᏗ ᎠᎷᏚᎧᏘ ᎦᏚᎢ. ᎾᏍᎩ ᎯᎠ ᏗᏯᎦᎸᏗ, ᎤᏂᎷᏨ ᎾᎿ ᎯᎠ ᏚᎵᏍᏛ ᎯᎠ ᎧᎾᏌᏛ, ᎿᏛᎦ ᎾᏍᎩ ᏂᎨᏒᎾ ᏗᎦᎸᏫᏍᏓᏁᏗ ᎾᎥᎢ ᏛᏓᏓᏂᎸᎬ. ᎤᏟ ᎬᏰᎸᏗ, ᎯᎠ ᎦᏚᎢ ᎯᎠ ᎤᏚᏃᎯᏍᏔᏍᎧ ᎤᎾᏠᏯᏍᏗ interlocking ᎦᏁᎸ, ᎬᏙᏗ ᎤᏍᏗ ᎠᏍᏆᎵᏍᏗ ᎠᏰᎵ ᎤᏓᏃᏢᎢ ᎦᏁᎸ. ᎯᎳᎪ ᎢᏳ ᎯᎠ ᏩᎶᏏ ᏂᎬᎾᏗᏍᎪ ᎤᎳᏂᎬᎬ ᎯᎠ ᎧᎾᏌᏛ ᏗᏯᎦᎸᏗ, ᎯᎠ interlocking ᎦᏁᎸ ᎦᏂᏴᏗ irregularities ᎾᎿ ᎯᎠ substrate. ᎯᎠ ᎤᏍᏗ ᎠᏍᏆᎵᏍᏗ ᎠᏰᎵ ᎯᎠ ᎦᏁᎸ ᎠᏟᏴᏍᏗ ᎤᏣᏘᎾ ᏂᎦᏛ ᎠᎴ ᏌᎨᎢ ᏫᏚᏳᎪᏛ ᎤᎯᏌᏛ ᎾᎿ ᎯᎠ ᎤᏚᏃᎯᏍᏔᏍᎧ, ᎠᎴ ᎢᎦᏘᎭ ᎢᎬᏁᏗ ᎦᏂᏴᏗ ᏗᎬᏩᎶᏒ [[capillarity]]. ᎪᎯ ᎠᎵᏍᎪᎸᏙᏗ ᎯᎠ ᏩᎶᏏ ᎦᏂᏴᏗ ᎤᏩᎾᏕᏍᎩ ᎦᏚᎢ, ᎠᎴ ᎾᏛᏁ ᎾᏍᎩ ᏂᎨᏒᎾ ᎤᏯᎾᏛᏁᏗ ᎯᎳᎪ ᎢᏳ ᎯᎠ ᏗᏯᎦᎸᏗ ᎠᎴ ᏂᎬᎢ ᎦᏚᎵᏓ.<ref>Emerson, S.B. and D. Diehl (1980). "Toe pad morphology and mechanisms of sticking in frogs." ''Biol. J. Linn. Society.'' Volume 13, issue 3: 199–216.</ref>
+[[Tree frog|Arboreal ᏩᎶᏏ]] ᎤᎭ "ᎧᎾᏌᏛ ᏗᏯᎦᎸᏗ" ᎠᎵᏍᏕᎸᏗ ᎦᏂᏴᏗ ᎠᎷᏚᎧᏘ ᎦᏚᎢ. ᎾᏍᎩ ᎯᎠ ᏗᏯᎦᎸᏗ, ᎤᏂᎷᏨ ᎾᎿ ᎯᎠ ᏚᎵᏍᏛ ᎯᎠ ᎧᎾᏌᏛ, ᎿᏛᎦ ᎾᏍᎩ ᏂᎨᏒᎾ ᏗᎦᎸᏫᏍᏓᏁᏗ ᎾᎥᎢ ᏛᏓᏓᏂᎸᎬ. ᎤᏟ ᎬᏰᎸᏗ, ᎯᎠ ᎦᏚᎢ ᎯᎠ ᎤᏚᏃᎯᏍᏔᏍᎧ ᎤᎾᏠᏯᏍᏗ interlocking ᎦᏁᎸ, ᎬᏙᏗ ᎤᏍᏗ ᎠᏍᏆᎵᏍᏗ ᎠᏰᎵ ᎤᏓᏃᏢᎢ ᎦᏁᎸ. ᎯᎳᎪ ᎢᏳ ᎯᎠ ᏩᎶᏏ ᏂᎬᎾᏗᏍᎪ ᎤᎳᏂᎬᎬ ᎯᎠ ᎧᎾᏌᏛ ᏗᏯᎦᎸᏗ, ᎯᎠ interlocking ᎦᏁᎸ ᎦᏂᏴᏗ irregularities ᎾᎿ ᎯᎠ substrate. ᎯᎠ ᎤᏍᏗ ᎠᏍᏆᎵᏍᏗ ᎠᏰᎵ ᎯᎠ ᎦᏁᎸ ᎠᏟᏴᏍᏗ ᎤᏣᏘᎾ ᏂᎦᏛ ᎠᎴ ᏌᎨᎢ ᏫᏚᏳᎪᏛ ᎤᎯᏌᏛ ᎾᎿ ᎯᎠ ᎤᏚᏃᎯᏍᏔᏍᎧ, ᎠᎴ ᎢᎦᏘᎭ ᎢᎬᏁᏗ ᎦᏂᏴᏗ ᏗᎬᏩᎶᏒ [[capillarity]]. ᎪᎯ ᎠᎵᏍᎪᎸᏙᏗ ᎯᎠ ᏩᎶᏏ ᎦᏂᏴᏗ ᎤᏩᎾᏕᏍᎩ ᎦᏚᎢ, ᎠᎴ ᎾᏛᏁ ᎾᏍᎩ ᏂᎨᏒᎾ ᎤᏯᎾᏛᏁᏗ ᎯᎳᎪ ᎢᏳ ᎯᎠ ᏗᏯᎦᎸᏗ ᎠᎴ ᏂᎬᎢ ᎦᏚᎵᏓ.<ref>Emerson, S.B. ᎠᎴ D. Diehl (1980). "Toe pad morphology ᎠᎴ mechanisms of sticking in frogs." ''Biol. J. Linn. Society.'' Volume 13, issue 3: 199–216.</ref>
 
-ᎭᏫᎾᏗᏢ ᎤᎪᏗᏗ arboreal ᏩᎶᏏ, ᎤᏍᏗ "ᎤᎾᏓᏟᏌᎲ ᎠᏛᎯᏍᏙᏗ" ᎭᏫᎾᏗᏢ ᎠᏂᏏᏴᏫᎭ ᎧᎾᏌᏛ ᎧᏁᏉᎠ ᎯᎠ ᎦᏚᎢ ᎡᏍᎦᏂ ᎠᏒᏂᎲᎢ ᎯᎠ substrate. ᎤᏗᏗᏢᎢᎨᏍᏙᏗ, ᎣᏂ ᏧᏩᎫᏛ hopping ᏗᎬᏩᎶᏒ ᏕᏡᎬ ᏰᎵᏇ ᎾᏍᏋ ᎦᏂᏰᎬ, ᎤᎪᏗᏗ arboreal ᏩᎶᏏ ᎤᎭ ᎠᎧᏍᎨᏂ ᎤᏫᏢ Ꮎ ᎠᎵᏍᎪᎸᏙᏗ ᎢᏧᎳ hopping ᎠᎴ ᎠᎢᏒᎢ. ᎢᎦᏛ ᏩᎶᏏ Ꮎ ᎠᎴᏂᏓᏍᏗ ᎦᎸᎳᏗ ᎭᏫᎾᏗᏢ ᏕᏡᎬ ᎢᏧᎳᎭ ᏄᏩᎿᏅ ᎠᎲᏲᎵᏓ ᎢᎦᎢ ᎢᎦᏘ webbing ᎠᏰᎵ ᎤᎾᏤᎵ ᎧᎾᏌᏛ, ᏥᏄᏍᏗ ᎿᏛᎦ aquatic ᏩᎶᏏ. ᎠᎴ ᎭᏫᎾᏗᏢ ᎾᏍᎩ ᎯᎠ arboreal ᏩᎶᏏ, ᎯᎠ ᎤᏂᏏᎳᏛ ᎠᎵᏍᎪᎸᏙᏗ ᎯᎠ ᏩᎶᏏ "ᏥᏳ" ᎠᎴ ᎠᎨᏔᏗᏍᏗ ᎤᎾᏤᎵ ᏫᏚᏳᎪᏛ ᏂᏛᎴᏅᏓ ᏌᏊ ᎾᎿ ᎦᏙᎬ ᎭᏫᎾᏗᏢ ᎯᎠ ᎠᏰᎵ ᏄᏓᎴ.<ref>Harvey, M. B, A. J. Pemberton, and E. N. Smith| year=2002| title=New and poorly known parachuting frogs (Rhacophoridae : ''Rhacophorus'') from Sumatra and Java| journal=Herpetological Monographs| volume=16| pages=46-92.</ref>
+ᎭᏫᎾᏗᏢ ᎤᎪᏗᏗ arboreal ᏩᎶᏏ, ᎤᏍᏗ "ᎤᎾᏓᏟᏌᎲ ᎠᏛᎯᏍᏙᏗ" ᎭᏫᎾᏗᏢ ᎠᏂᏏᏴᏫᎭ ᎧᎾᏌᏛ ᎧᏁᏉᎠ ᎯᎠ ᎦᏚᎢ ᎡᏍᎦᏂ ᎠᏒᏂᎲᎢ ᎯᎠ substrate. ᎤᏗᏗᏢᎢᎨᏍᏙᏗ, ᎣᏂ ᏧᏩᎫᏛ hopping ᏗᎬᏩᎶᏒ ᏕᏡᎬ ᏰᎵᏇ ᎾᏍᏋ ᎦᏂᏰᎬ, ᎤᎪᏗᏗ arboreal ᏩᎶᏏ ᎤᎭ ᎠᎧᏍᎨᏂ ᎤᏫᏢ Ꮎ ᎠᎵᏍᎪᎸᏙᏗ ᎢᏧᎳ hopping ᎠᎴ ᎠᎢᏒᎢ. ᎢᎦᏛ ᏩᎶᏏ Ꮎ ᎠᎴᏂᏓᏍᏗ ᎦᎸᎳᏗ ᎭᏫᎾᏗᏢ ᏕᏡᎬ ᎢᏧᎳᎭ ᏄᏩᎿᏅ ᎠᎲᏲᎵᏓ ᎢᎦᎢ ᎢᎦᏘ webbing ᎠᏰᎵ ᎤᎾᏤᎵ ᎧᎾᏌᏛ, ᏥᏄᏍᏗ ᎿᏛᎦ aquatic ᏩᎶᏏ. ᎠᎴ ᎭᏫᎾᏗᏢ ᎾᏍᎩ ᎯᎠ arboreal ᏩᎶᏏ, ᎯᎠ ᎤᏂᏏᎳᏛ ᎠᎵᏍᎪᎸᏙᏗ ᎯᎠ ᏩᎶᏏ "ᏥᏳ" ᎠᎴ ᎠᎨᏔᏗᏍᏗ ᎤᎾᏤᎵ ᏫᏚᏳᎪᏛ ᏂᏛᎴᏅᏓ ᏌᏊ ᎾᎿ ᎦᏙᎬ ᎭᏫᎾᏗᏢ ᎯᎠ ᎠᏰᎵ ᏄᏓᎴ.<ref>Harvey, M. B, A. J. Pemberton, ᎠᎴ E. N. Smith (2002). "ᎢᏤ ᎠᎴ poorly known parachuting frogs (Rhacophoridae : ''Rhacophorus'') from Sumatra and Java." ''Herpetological Monographs.'' Vol. 16: 46-92.</ref>
 
 ᎦᏙᎯ-ᎦᏁᎸ ᏩᎶᏏ ᏂᎦᎥᏊ ᎦᎷᎶᎩ ᎯᎠ adaptations aquatic ᎠᎴ arboreal ᏩᎶᏏ. ᎤᎪᏗᏗ ᎤᎭ ᎠᏂᎦᏲᎵ ᎧᎾᏌᏛ ᏗᏯᎦᎸᏗ, ᎢᏳᏃ ᏂᎦᎵᏍᏗᏍᎬᎫ, ᎠᎴ ᎤᏍᏗ webbing. ᎢᎦᏛ ᎦᎷᎯᏍᏗ ᏩᎶᏏ ᎤᎭ ᎧᎾᏌᏛ extension—a metatarsal tubercle—that ᏧᎾᎵᏍᏕᎸᏗ ᎠᏂ ᎦᎷᎯᏍᏗ. ᎯᎠ ᎣᏂᏗᏢ ᏗᏂᏅᏍᎨᏂ ᎦᏙᎯ ᎡᎯ ᎠᎴ ᎤᏟ ᎢᎦᎢ ᏄᎵᏂᎬᎬ ᎬᎾᏬᏍᎬ ᎾᏍᎩ ᎠᎹ ᎠᎴ ᏡᎬ-ᎦᏁᎸ ᏩᎶᏏ.
 
@@ -66,7 +66,7 @@
 
 === ᎠᏓᎯᎯ ===
 [[File:Dendrobates pumilio.jpg|thumb|190px|left|''[[Dendrobates pumilio]]'',  [[poison dart frog|ᎠᏓᎯᎯ ᎦᏣᏄᎳ ᏩᎶᏏ]], ᎢᎦᎢ ᎨᏐ ᎤᏂᎪᏗᏗ alkaloids ᎦᏙ ᎤᏍᏗ ᎠᏕᎸ ᏗᏎᎯᏍᏗ predators.]]
-ᎤᎪᏗᏗ ᏩᎶᏏ ᎢᎦᎢ ᎨᏒ ᏩᏂᎦᎳ [[toxin]] Ꮎ ᎪᏢᏗ ᎠᏂ ᎤᏦᎠᏎᏗ ᏰᎵᏊ ᏱᎩ predators.  ᎾᏍᎩᎾᎢ ᏱᏓᏟᎶᏍᏔᏅ, ᏂᎦᏛ ᏩᎶᏏ ᎤᎭ ᎡᏆ ᎠᏓᎯᎯ glands—the parotid glands—located ᎣᏂᏗᏢ ᎯᎠ digatoli ᎾᎿ ᎯᎠ ᎦᏚᎢ ᎯᎠ ᎠᏍᎪᎵ. ᎢᎦᏛ ᏩᎶᏏ, ᏯᏛᎿ ᏥᏄᏍᏗ ᎢᎦᏛ [[Poison Dart Frog|ᎠᏓᎯᎯ ᎦᏣᏄᎳ ᏩᎶᏏ]], ᎠᎴ ᎾᏍᎩ ᎨᏒᎢ ᎠᏓᎯᎯ. ᎯᎠ chemical ᎦᎴᏴᏗᏍᎬᎢ toxins ᎭᏫᎾᏗᏢ ᏩᎶᏏ varies ᏂᏛᎴᏅᏓ irritants [[hallucinogen]], [[seizure|convulsant]], [[neurotoxin|ᎣᏓᎾᏛ ᎠᏓᎯᎯ]], ᎠᎴ [[vasoconstrictor]] (ᎦᏙ ᎤᏍᏗ ᎠᏯᏙᎵ ᎯᎠ ᎩᎬ ᏧᎬᏩᎶᏗ ᎠᎦᏘᏯ). ᎤᎪᏗᏗ predators ᏩᎶᏏ ᎤᎭ ᏰᎵ ᏗᏙᎳᎩ ᎢᎬᏁᎸ ᏙᎯ ᎠᏕᏗ ᎦᎸᎳᏗ ᎤᏩᎾᏕᏍᎩ ᎾᏍᎩ ᎯᎠ ᎠᏓᎯᎯ. ᎠᏂᏐᎢ, ᎠᏠᏯᏍᏗᏍᎩ ᎠᏂᏴᏫ, ᎠᎾᏍᎬᏘ ᎾᏍᏋ ᏂᎬᎢ ᎦᎸᏉᏔᏅ.
+ᎤᎪᏗᏗ ᏩᎶᏏ ᎢᎦᎢ ᎨᏒ ᏩᏂᎦᎳ [[toxin]] Ꮎ ᎪᏢᏗ ᎠᏂ ᎤᏦᎠᏎᏗ ᏰᎵᏊ ᏱᎩ predators.  ᎾᏍᎩᎾᎢ ᏱᏓᏟᎶᏍᏔᏅ, ᏂᎦᏛ ᏩᎶᏏ ᎤᎭ ᎡᏆ ᎠᏓᎯᎯ glands—the parotid glands—located ᎣᏂᏗᏢ ᎯᎠ ᏗᎦᏙᎵ ᎾᎿ ᎯᎠ ᎦᏚᎢ ᎯᎠ ᎠᏍᎪᎵ. ᎢᎦᏛ ᏩᎶᏏ, ᏯᏛᎿ ᏥᏄᏍᏗ ᎢᎦᏛ [[Poison Dart Frog|ᎠᏓᎯᎯ ᎦᏣᏄᎳ ᏩᎶᏏ]], ᎠᎴ ᎾᏍᎩ ᎨᏒᎢ ᎠᏓᎯᎯ. ᎯᎠ chemical ᎦᎴᏴᏗᏍᎬᎢ toxins ᎭᏫᎾᏗᏢ ᏩᎶᏏ varies ᏂᏛᎴᏅᏓ irritants [[hallucinogen]], [[seizure|convulsant]], [[neurotoxin|ᎣᏓᎾᏛ ᎠᏓᎯᎯ]], ᎠᎴ [[vasoconstrictor]] (ᎦᏙ ᎤᏍᏗ ᎠᏯᏙᎵ ᎯᎠ ᎩᎬ ᏧᎬᏩᎶᏗ ᎠᎦᏘᏯ). ᎤᎪᏗᏗ predators ᏩᎶᏏ ᎤᎭ ᏰᎵ ᏗᏙᎳᎩ ᎢᎬᏁᎸ ᏙᎯ ᎠᏕᏗ ᎦᎸᎳᏗ ᎤᏩᎾᏕᏍᎩ ᎾᏍᎩ ᎯᎠ ᎠᏓᎯᎯ. ᎠᏂᏐᎢ, ᎠᏠᏯᏍᏗᏍᎩ ᎠᏂᏴᏫ, ᎠᎾᏍᎬᏘ ᎾᏍᏋ ᏂᎬᎢ ᎦᎸᏉᏔᏅ.
 
 ᎢᎦᏛ ᏩᎶᏏ ᎣᏤᎵ ᎢᎬᏁᎯ ᎠᏓᎯᎯ ᏂᏛᎴᏅᏓ ᎯᎠ ᏙᏒᏓᎵ ᎠᎴ ᏐᎢ arthropods ᎤᏅᏌ ᎠᎩᏍᏗ;<ref>Saporito, R.A., H.M. Garraffo, M.A. Donnelly, A.L. Edwards, J.T. Longino, ᎠᏢ J.W. Daly. (2004) "Formicine ants: An arthropod source for the pumiliotoxin alkaloids of dendrobatid poison frogs." ''Proceedings of the National Academy of Science.'' volume=101 pages=8045-8050.</ref>ᎠᏂᏐᎢ, ᏯᏛᎿ ᏥᏄᏍᏗ ᎯᎠ Australian [[Corroboree Frog|Corroboree ᏩᎶᏏ]] (''Pseudophryne corroboree'' ᎠᎴ ''Pseudophryne pengilleyi''), ᏰᎵᏇ ᎠᏃᏢᏂᎥᎥᏍᎬ [[alkaloid]] ᎾᏍᎩ ᏂᎨᏒᎾ derived ᏂᏛᎴᏅᏓ ᎤᎾᏤᎵ ᎠᎵᏍᏓᏴᏗ.<ref>Smith, B. P.| coauthors=Tyler M. J., Kaneko T., Garraffo H. M., Spande T. F., Daly J. W.| year=2002| title=Evidence for biosynthesis of pseudophrynamine alkaloids by an Australian myobatrachid frog (pseudophryne) and for sequestration of dietary pumiliotoxins| journal=J Nat Prod| volume=65| issue=4| pages=439-47}}</ref> ᎢᎦᏛ ᎾᏰᎯᏯ ᏴᏫ ᎤᎦᎾᏭ ᎠᎺᎵᎨ ᎠᎲᏏᏓᏍᏗ ᎠᏓᎯᎯ ᏂᏛᎴᏅᏓ ᎯᎠ ᎠᏓᎯᎯ ᎦᏣᏄᎳ ᏩᎶᏏ ᎠᎴ ᎢᎬᎾᏙᏗ ᎾᏍᎩ ᎤᎾᏤᎵ [[dart|ᎦᏣᏄᎳ]] ᎾᏍᎩᎾᎢ ᎠᏂᏃᎯᎵᏙᎲ,<ref>Myers, C.W. ᎠᎴ J.W. Daly (1983). "Dart-poison frogs." ''Scientific American.'' volume 248: 120-133.</ref> ᎾᏍᎩ ᎤᏁᎳᎩ ᎦᏲᎵ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᎠᎴ ᎠᏓᎯᎯ ᏰᎵᏊ ᎾᏍᏋ ᎬᏔᏅᎯ ᎾᏍᎩᎾᎢ ᎪᎯ ᎤᏰᎸᏛᎢ. ᎾᏍᎩ ᏥᏄᏍᏛᎩ ᏧᏩᎫᏔᏅᏒ ᎦᎵᏓᏍᏛ Ꮎ ᎯᎠ ᎠᏓᎯᎯ ᏥᏄᏍᏛᎩ ᎾᎿᏭᏅᎩ ᎾᎿ ᎦᏟᏓ ᎤᏟ ᎬᏰᎸᏗ ᎬᎾᏬᏍᎬ ᎦᏣᏄᎳ. ᎯᎠ ᏧᏣᏔᏊ ᏚᏙᎥ ᎾᏍᎩ ᎯᎠ ᏩᎶᏏ ᏥᏄᏍᏛᎩ ᎯᎠ ᎢᏴ ᎦᏁᏟᏴᏓ ᏂᏛᎴᏅᏓ "ᎠᏓᎯᎯ ᎦᏟᏓ ᏩᎶᏏ" "ᎠᏓᎯᎯ ᎦᏣᏄᎳ ᏩᎶᏏ" ᎭᏫᎾᏗᏢ ᎯᎠ ᎢᎬᏱ 1980s. ᏗᏄᏬ ᏗᎦᏛᏗ ᏩᎶᏏ ᏫᏚᏳᎪᏛ ᏗᎦᏃᏣᎸᏗ ᎤᎾᏤᎵ ᎠᏓᎯᎯ ᎬᏙᏗ ᏧᎸᏌᏓ [[colors|ᏧᏓᎴᏅᏓ ᏗᎧᏃᏗ]], adaptive ᏗᏟᎶᏍᏙᏗ ᎤᎾᏅᏛ ᏥᏄᏍᏗ [[aposematism]]. ᎾᎿᎢ ᎠᎴ ᎾᎾᎢ ᎠᏂᎦᏲᎵ ᏔᎵ ᎬᏙᏗ-ᏗᏄᏬ ᏗᎦᏛᏗ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᏩᎶᏏ ᎭᏫᎾᏗᏢ ᎤᎦᎾᏭ ᎠᎺᎵᎨ (''Eleutherodactylus gaigei'' ᎠᎴ ''Lithodytes lineatus'') Ꮎ ᏗᏟᎶᏍᏔᏅ ᎯᎠ coloration ᎦᏣᏄᎳ ᎠᏓᎯᎯ ᏩᎶᏏ' ᏗᎧᏃᏗ ᎾᏍᎩᎾᎢ ᎣᏩᏒ-ᎠᎵᏍᏕᎸᏙᏗ ([[Batesian mimicry]]).<ref>Savage|, J. M. (2002). ''The Amphibians and Reptiles of Costa Rica.'' University of Chicago Press, Chicago</ref><ref>Duellman, W. E. (1978) ''The Biology of an Equatorial Herpetofauna in Amazonian Ecuador.'' University of Kansas Museum of Natural History Miscellaneous Publication.'' Volume 65: pages 1-352.</ref>
 
@@ -80,7 +80,7 @@
 ᏩᎶᏏ ᎠᎴ ᎤᎾᏅᏛ ᎾᏍᎩᎾᎢ ᎤᎾᏤᎵ ᏦᎢ-chambered [[heart|ᎠᏓᏅᏙ]], ᎦᏙ ᎤᏍᏗ ᎤᏅᏌ ᎠᏓᏲᏔᎡᏗ ᎬᏙᏗ ᏂᎦᏛ [[tetrapod]] ᎾᏍᎩ ᎤᏩᏒ [[bird|ᏥᏍᏆ]] ᎠᎴ [[mammal]]. ᎭᏫᎾᏗᏢ ᎯᎠ ᏦᎢ-chambered ᎠᏓᏅᏙ, oxygenated ᎩᎬ ᏂᏛᎴᏅᏓ ᎯᎠ ᎦᏃᎸᎥᏍᎬ ᎠᎴ ᏧᎬᏩᎶᏗ ᎠᎦᏘᏯ-oxygenated ᎩᎬ ᏂᏛᎴᏅᏓ ᎯᎠ [[respiration|respiring]] ᏂᎦᏛ ᎠᏴᏍᏗ ᎾᎥᎢ ᏧᏓᎴᎿᎢ [[atrium|atria]], ᎠᎴ ᎠᎴ ᎠᏓᏎᎮᎸ ᎾᎿ ᎢᏗᏢ ᏓᏍᏟᏁᎦ ᎠᏍᏚᏙᏗ ᎯᎠ ᏗᏙᎳᎩ vessel—[[aorta|ᎤᎶᎯᏍᏗ]] ᎾᏍᎩᎾᎢ oxygenated ᎩᎬ ᎠᎴ [[pulmonary vein|ᎦᏃᎸᎥᏍᎬ ᏫᏚᏳᎪᏛ]] ᎾᏍᎩᎾᎢ deoxygenated ᎩᎬ. ᎪᎯ ᎤᏤᎵᏛ ᎠᏛᎯᏍᏙᏗ ᎨᏒᎢ ᎤᎵᏍᎨᏛ ᎤᏍᏆᏂᎪᏛ ᎯᎠ ᎦᏟᏐᏗ ᎯᎠ ᏔᎵ ᎢᏗᎦᎪᏘ ᎩᎬ ᏭᏍᏗᎬᎢ, ᎦᏙ ᎤᏍᏗ ᏰᎵ ᎢᏳᎵᏍᏙᏗ ᏩᎶᏏ ᎤᎭ ᎦᎸᎳᏗᎨᏍᏙᏗ metabolic ᏓᎬᏩᎶᏛ, ᎠᎴ ᎾᏍᏋ ᎤᏟ ᎢᎦᎢ ᎢᏯᏛᏁᎯ ᎬᎾᏬᏍᎬ ᎢᏳᏃ ᏰᎵ.
 
 == ᏂᎬᏩᏍᏛ ᎧᏃᎮᏍᎩ ==
-ᎯᎠ ᎥᎴᏂᏙᎲ ᎠᏓᏠᎯᏍᏗ ᏩᎶᏏ, ᎾᏍᎩᏯᎢ Ꮎ ᏐᎢ amphibians, ᎤᎾᏠᏯᏍᏗ ᏅᎩ ᏄᎬᏫᏳᏒ ᎠᏓᏅᏍᏗ: ᎤᏪᏥ, ᏖᎦ, ᏧᎾᏍᏗ ᎠᎴ ᎤᏔᎾ. ᎯᎠ ᎤᏚᎩ ᎬᏒ ᏩᎶᏏ ᎾᎿ aquatic ᏄᏍᏗᏓᏅ ᎾᏍᎩᎾᎢ ᎯᎠ ᎤᏪᏥ ᎠᎴ ᏖᎦ ᎠᏓᏅᏍᏗ ᎠᏓᏁᏗ ᎤᎵᏌᎳᏙᏗ ᏧᏓᎴᏅᏓ ᎦᏟᏌᏅ ᎧᏁᏉᏍᎬ behaviors Ꮎ ᎠᏠᏯᏍᏛ ᎯᎠ ᎠᏔᎴᏒ ᎠᎹᏱ-ᎤᎾᏅᏛ ᎠᏯᏖᏃ ᎦᏅᏗ ᏓᏯᏂ ᎬᏔᏅᎯ ᎾᎥᎢ ᎯᎠ ᎠᏍᎦᏯ ᎤᎪᏗᏗ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᎠᎦᏎᏍᏙᏗ ᎠᎨᏴ ᎯᎠ ᏗᏂᏰᎸ ᎠᎹ Ꮎ ᎤᏅᏌ ᎤᎭ ᎠᏑᏰᏛ ᎾᏍᎩᎾᎢ ᎧᏁᏉᏍᎬ. ᎢᎦᏛ ᏩᎶᏏ ᎾᏍᎩ ᎾᏍᏇ ᎭᎦᏔ ᎤᎶᏐᏅ ᎤᎾᏤᎵ eggs—and ᎭᏫᎾᏗᏢ ᎢᎦᏛ ᏕᎦᎸᏛ ᎧᏁᏌᎢ ᎢᏧᎳᎭ ᎯᎠ tadpoles—for ᎢᎦᏛ ᎢᏳᏩᎪᏗ ᎤᎶᏐᏅ ᎠᏂᏝᎲᏍᎬ.
+ᎯᎠ ᎥᎴᏂᏙᎲ ᎠᏓᏠᎯᏍᏗ ᏩᎶᏏ, ᎾᏍᎩᏯᎢ Ꮎ ᏐᎢ amphibians, ᎤᎾᏠᏯᏍᏗ ᏅᎩ ᏄᎬᏫᏳᏒ ᎠᏓᏅᏍᏗ: ᎤᏪᏥ, ᏖᎦ, ᏧᎾᏍᏗ ᎠᎴ ᎤᏔᎾ. ᎯᎠ ᎤᏚᎩ ᎬᏒ ᏩᎶᏏ ᎾᎿ aquatic ᏄᏍᏗᏓᏅ ᎾᏍᎩᎾᎢ ᎯᎠ ᎤᏪᏥ ᎠᎴ ᏖᎦ ᎠᏓᏅᏍᏗ ᎠᏓᏁᏗ ᎤᎵᏌᎳᏙᏗ ᏧᏓᎴᏅᏓ ᎦᏟᏌᏅ ᎧᏁᏉᏍᎬ behaviors Ꮎ ᎠᏠᏯᏍᏛ ᎯᎠ ᎠᏔᎴᏒ ᎠᎹᏱ-ᎤᎾᏅᏛ ᎠᏯᏖᏃ ᎦᏅᏗ ᏓᏯᏂ ᎬᏔᏅᎯ ᎾᎥᎢ ᎯᎠ ᎠᏍᎦᏯ ᎤᎪᏗᏗ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᎠᎦᏎᏍᏙᏗ ᎠᎨᏴ ᎯᎠ ᏗᏂᏰᎸ ᎠᎹ Ꮎ ᎤᏅᏌ ᎤᎭ ᎠᏑᏰᏛ ᎾᏍᎩᎾᎢ ᎧᏁᏉᏍᎬ. ᎢᎦᏛ ᏩᎶᏏ ᎾᏍᎩ ᎾᏍᏇ ᎭᎦᏔ ᎤᎶᏐᏅ ᎤᎾᏤᎵ [[eggs|ᏧᏪᏥ]]—ᎠᎴ ᎭᏫᎾᏗᏢ ᎢᎦᏛ ᏕᎦᎸᏛ ᎧᏁᏌᎢ ᎢᏧᎳᎭ ᎯᎠ tadpoles—for ᎢᎦᏛ ᎢᏳᏩᎪᏗ ᎤᎶᏐᏅ ᎠᏂᏝᎲᏍᎬ.
 
 === ᏂᏛᎴᏅᏓ ᏧᏪᏥ ᎤᏔᎾ ===
 [[File:Frogspawn closeup.jpg|190px|thumb|Frogspawn]]
@@ -91,12 +91,12 @@
 
 ᏧᏪᏥ ᏓᏂᏯᎢᏍᎬ ᎠᎴ ᎬᎵᏱᎵᏒ ᎥᎴᏂᏙᎲ ᏥᏄᏍᏗ [[tadpole|ᏖᎦ]] (ᎢᏳᏓᎵᎭᏊ ᎤᎾᏅᏛ ᏥᏄᏍᏗ polliwogs). ᏖᎦ ᎠᎴ aquatic, ᎦᎷᎶᎩ ᎢᎬᏱᏗᏢ ᎠᎴ ᎣᏂᏗᏢ ᏗᏂᏅᏍᎨᏂ, ᎠᎴ ᎤᎭ ᎦᏃᎸᎥᏍᎬ ᎾᏍᎩᎾᎢ ᎥᎴᏂᏙᎲ ᎠᎴ ᎦᏂᏓᏛ ᎬᏙᏗ ᎠᏂᎩᏍᏗ ᏥᏳ ᎾᏍᎩᎾᎢ ᎠᏓᏬᏍᎬ. ᏖᎦ ᎠᎴ ᎢᏯᏛᏁᎵᏓᏍᏗ [[herbivore|ᎠᎵᏍᏓᏴᏗ]], ᎨᎳᏍᏙᏗ ᎾᏍᎩ ᎤᎪᏗᏗ ᎾᎿ [[alga]]e, ᎠᏠᏯᏍᏗᏍᎩ [[diatom]] Ꮎ ᎠᎴ filtered ᏂᏛᎴᏅᏓ ᎯᎠ ᎠᎹ ᏗᎬᏩᎶᏒ ᎯᎠ [[gill|ᎪᏍᏓᏱ]]. ᎢᎦᏛ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᎠᎴ ᎠᎵᏍᏓᏴᏗ ᎾᎾᎢ ᎯᎠ ᏖᎦ ᎦᏬᏂᎯᏍᏗ ᎠᏲᏓᏜᎥ, ᎠᎵᏍᏓᏴᎲᏍᎬ ᎠᏂᏍᎧᏱ, ᎠᏂᎦᏲᎵ ᏖᎦ ᎠᎴ ᎠᏣᏗ. ᏖᎦ ᎠᎴ ᎦᎸᎳᏗᎨᏍᏗ ᎦᏂᏰᎩ predation ᎾᎥᎢ ᎠᏣᏗ, [[newt]], ᎠᎩᏍᎬᎢ [[diving beetle|diving ᏂᎦᏛᎢ]] ᎠᎴ ᎯᎸᏍᎩ ᏥᏍᏆ ᏯᏛᎿ ᏥᏄᏍᏗ [[kingfisher|ᏧᎷ]]. [[Cannibalism|ᏔᎵᏁ ᎠᏓᎴᏁ]] ᎤᎭ ᏭᏪᏙᎢ ᎠᎦᏎᏍᏔᏅ ᏄᎾᏛᏅ ᏖᎦ. ᏗᏄᏬ ᏗᎦᏛᏗ ᏖᎦ ᎠᎴ ᎡᏙᎠ ᎭᏫᎾᏗᏢ ᎤᎪᏗᏗ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ, ᏯᏛᎿ ᏥᏄᏍᏗ ᏩᏚᎵᏏ ᎪᏢᏗ ᎧᎵᏎᏥ ᏩᎶᏏ. ᎯᎠ ᏖᎦ ᎦᏬᏂᎯᏍᏗ ᎠᏲᏓᏜᎥ ᎠᎾᏍᎬᏘ ᎾᏍᏋ ᏥᏄᏍᏗ ᏍᏆᎳᎢ ᏥᏄᏍᏗ ᏑᎾᏙᏓᏆᏍᏗ, ᎠᎴ ᏖᎦ ᎠᎾᏍᎬᏘ overwinter ᎠᎴ ᏧᎾᏍᏗ ᎯᎠ ᎠᏍᏓᏩᏗᏒ ᏑᏕᏘᏴᏓ ᎭᏫᎾᏗᏢ ᎢᎦᏛ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ, ᏯᏛᎿ ᏥᏄᏍᏗ ᎯᎠ [[Midwife toad|ᎠᏓᎦᏘᏗᏍᎩ ᏩᎶᏏ]] (''Alytes obstetricans'') ᎠᎴ ᎯᎠ ᏧᏣᏔᏊ Spadefoot (''Pelobates fuscus'').
 
-ᎾᎾᎢ ᎯᎠ ᎤᎵᏍᏛ ᎯᎠ ᏖᎦ ᎦᏬᏂᎯᏍᏗ ᎠᏲᏓᏜᎥ, ᏩᎶᏏ ᏂᎦᎵᏍᏔᏂᏙᎲ [[Metamorphosis (biology)|ᏧᎾᏍᏗ]], ᎭᏫᎾᏗᏢ ᎦᏙ ᎤᏍᏗ ᎤᏅᏌ ᎠᎦᏲᎳᏗᏍᏗ ᎾᎾᎯ ᎤᏔᎾ ᎤᏙᏢᏒ. ᏧᎾᏍᏗ ᎠᏓᏠᏯᏍᏙᏗ ᎤᎾᏛᏁᎵᏗ ᏧᎾᏍᏗ ᎤᎾᏙᏢᎯ ᎠᎴ ᎤᎾᏙᏢᎯ, ᏥᏄᏍᏗ ᏖᎦ ᎤᏙᎷᏬᏗ ᎣᏂᏗᏢ ᏗᏂᏅᏍᎨᏂ ᎠᎴ ᎾᎯᏳᎢ ᎢᎬᏱᏗᏢ ᏗᏂᏅᏍᎨᏂ, ᎤᏓᏲᎱᏎᏗ ᎤᎾᏤᎵ ᎦᏃᎸᎥᏍᎬ ᎠᎴ ᎤᏙᎷᏬᏗ ᎦᏃᎸᎥᏍᎬ. ᎤᎾᏤᎵ ᎭᏫᎾᏗᏢ ᎠᎦᏲᎳᏗᏍᏗ ᏥᏄᏍᏗ ᎤᏅᏌ ᏗᏓᏁᏟᏴᏍᏗ ᏂᏛᎴᏅᏓ ᎠᎵᏍᏓᏴᏗ ᎠᎵᏍᏓᏴᏗ ᎠᎵᏍᏓᏴᏗ. digatoli ᎠᏓᏅᏍᏗᏱ rostrally ᎠᎴ ᎣᏂᏗᏢ, ᎠᎵᏍᎪᎸᏙᏗ ᎾᏍᎩᎾᎢ ᏗᏓᎨᏗ ᎠᎪᏩᏛᏗ ᎬᏂᎨᏒ ᎢᎬᏁᎸ ᎾᎥᎢ ᎯᎠ ᎤᏔᎾ ᏩᎶᏏ.  ᎪᎯ ᏗᏓᏁᏟᏴᏍᏗ ᎭᏫᎾᏗᏢ ᎠᎦᏙᎵ ᎾᎿ ᎦᏙᎬ ᏓᏎᏘ ᎯᎠ ᏗᏓᏁᏟᏴᏍᏗ ᏂᏛᎴᏅᏓ ᎠᎵᏍᏓᏴᏗ predator, ᏥᏄᏍᏗ ᎯᎠ ᏖᎦ ᎤᏙᎷᏬᏗ ᎠᎴ ᎠᎵᏍᎦᏍᏙᏗ ᎦᏲᎵᎨ ᎾᏍᎩ ᎡᏆᎯᎨᏍᏙᏗ ᎠᎴ wider ᏠᎨᏏ ᎠᎪᏩᏛᏗ ᎠᎴ ᎤᏟ ᎢᎦᎢ ᎾᏍᎩ ᎤᏒᏙᏂ ᎥᎦᏔᎲᎢ. ᎯᎠ ᏭᎵᏍᏆᏙᏅ ᎦᏬᏂᎯᏍᏗ ᎠᏲᏓᏜᎥ ᏚᏙᎳᏩᏛᎲ ᏂᏛᎴᏅᏓ [[froglet|ᎤᏍᏗ ᏩᎶᏏ]] ᎤᏔᎾ ᏩᎶᏏ ᎠᏓᏠᏯᏍᏙᏗ [[apoptosis]] (programmed ᎦᏁᎸ ᎠᏲᎱᎯᏍᏗ) ᎠᎴ resorption ᎯᎠ ᎦᏂᏓᏛ.
+ᎾᎾᎢ ᎯᎠ ᎤᎵᏍᏛ ᎯᎠ ᏖᎦ ᎦᏬᏂᎯᏍᏗ ᎠᏲᏓᏜᎥ, ᏩᎶᏏ ᏂᎦᎵᏍᏔᏂᏙᎲ [[Metamorphosis (biology)|ᏧᎾᏍᏗ]], ᎭᏫᎾᏗᏢ ᎦᏙ ᎤᏍᏗ ᎤᏅᏌ ᎠᎦᏲᎳᏗᏍᏗ ᎾᎾᎯ ᎤᏔᎾ ᎤᏙᏢᏒ. ᏧᎾᏍᏗ ᎠᏓᏠᏯᏍᏙᏗ ᎤᎾᏛᏁᎵᏗ ᏧᎾᏍᏗ ᎤᎾᏙᏢᎯ ᎠᎴ ᎤᎾᏙᏢᎯ, ᏥᏄᏍᏗ ᏖᎦ ᎤᏙᎷᏬᏗ ᎣᏂᏗᏢ ᏗᏂᏅᏍᎨᏂ ᎠᎴ ᎾᎯᏳᎢ ᎢᎬᏱᏗᏢ ᏗᏂᏅᏍᎨᏂ, ᎤᏓᏲᎱᏎᏗ ᎤᎾᏤᎵ ᎦᏃᎸᎥᏍᎬ ᎠᎴ ᎤᏙᎷᏬᏗ ᎦᏃᎸᎥᏍᎬ. ᎤᎾᏤᎵ ᎭᏫᎾᏗᏢ ᎠᎦᏲᎳᏗᏍᏗ ᏥᏄᏍᏗ ᎤᏅᏌ ᏗᏓᏁᏟᏴᏍᏗ ᏂᏛᎴᏅᏓ ᎠᎵᏍᏓᏴᏗ ᎠᎵᏍᏓᏴᏗ ᎠᎵᏍᏓᏴᏗ. ᏗᎦᏙᎵ ᎠᏓᏅᏍᏗᏱ rostrally ᎠᎴ ᎣᏂᏗᏢ, ᎠᎵᏍᎪᎸᏙᏗ ᎾᏍᎩᎾᎢ ᏗᏓᎨᏗ ᎠᎪᏩᏛᏗ ᎬᏂᎨᏒ ᎢᎬᏁᎸ ᎾᎥᎢ ᎯᎠ ᎤᏔᎾ ᏩᎶᏏ.  ᎪᎯ ᏗᏓᏁᏟᏴᏍᏗ ᎭᏫᎾᏗᏢ ᎠᎦᏙᎵ ᎾᎿ ᎦᏙᎬ ᏓᏎᏘ ᎯᎠ ᏗᏓᏁᏟᏴᏍᏗ ᏂᏛᎴᏅᏓ ᎠᎵᏍᏓᏴᏗ predator, ᏥᏄᏍᏗ ᎯᎠ ᏖᎦ ᎤᏙᎷᏬᏗ ᎠᎴ ᎠᎵᏍᎦᏍᏙᏗ ᎦᏲᎵᎨ ᎾᏍᎩ ᎡᏆᎯᎨᏍᏙᏗ ᎠᎴ wider ᏠᎨᏏ ᎠᎪᏩᏛᏗ ᎠᎴ ᎤᏟ ᎢᎦᎢ ᎾᏍᎩ ᎤᏒᏙᏂ ᎥᎦᏔᎲᎢ. ᎯᎠ ᏭᎵᏍᏆᏙᏅ ᎦᏬᏂᎯᏍᏗ ᎠᏲᏓᏜᎥ ᏚᏙᎳᏩᏛᎲ ᏂᏛᎴᏅᏓ [[froglet|ᎤᏍᏗ ᏩᎶᏏ]] ᎤᏔᎾ ᏩᎶᏏ ᎠᏓᏠᏯᏍᏙᏗ [[apoptosis]] (programmed ᎦᏁᎸ ᎠᏲᎱᎯᏍᏗ) ᎠᎴ resorption ᎯᎠ ᎦᏂᏓᏛ.
 
 ᎤᎶᏐᏅ ᏧᎾᏍᏗ, ᎠᏲᎵ ᎤᏔᎾ ᎠᎾᏍᎬᏘ ᎠᏓᏅᏍᏗ ᎯᎠ ᎠᎹ ᎠᎴ ᎧᏁᏉᎩ ᎾᎾᎯ ᎡᎶᎯ ᏗᎦᎶᎪᏗ, ᎠᎴ ᎬᎵᏱᎵᏒ ᎠᎴᏂᏓᏍᏗ ᎭᏫᎾᏗᏢ ᎯᎠ aquatic ᏗᎦᎶᎪᏗ ᏥᏄᏍᏗ ᎤᏔᎾ. ᎾᎥᏂᎨᏍᏗ ᏂᎦᏛ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᏩᎶᏏ ᎠᎴ [[carnivore|ᎠᎵᏍᏓᏴᏗ]] ᏥᏄᏍᏗ ᎤᏔᎾ, ᎠᎵᏍᏓᏴᎲᏍᎬ invertebrates ᏯᏛᎿ ᏥᏄᏍᏗ [[arthropod]], [[annelid]] ᎠᎴ [[Gastropoda|gastropod]]. ᎦᏲᎵ ᎯᎠ ᎡᏆᎯᎨᏍᏙᏗ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᎠᎾᏍᎬᏘ ᎠᎩᏍᏗ ᎠᎵᏍᏓᏴᏗ ᏯᏛᎿ ᏥᏄᏍᏗ ᎤᏍᏗ [[mammal]], [[fish|ᎠᏣᏗ]] ᎠᎴ ᎠᏂᎦᏲᎵ ᏩᎶᏏ. ᎢᎦᏛ ᏩᎶᏏ ᎬᏙᏗ ᎤᎾᏤᎵ ᎦᏯᎸᎩ ᏗᎦᏅᎦ ᎦᏂᏴᏗ ᎦᏣᏄᎳ-ᎠᏓᏅ ᎠᎵᏍᏓᏴᏗ, ᎾᎯᏳᎢ ᎠᏂᏐᎢ ᎠᏥᏂᏱᏍᎬ ᎤᎾᏤᎵ ᎠᎵᏍᏓᏴᏗ ᎠᎴ ᎦᏌᏙᏯᏍᏗ ᎾᏍᎩ ᎾᎾᎯ ᎤᎾᏤᎵ ᎠᎰᎵ ᎬᏙᏗ ᎤᎾᏤᎵ ᏧᏃᏰᏂ. ᏱᏂᎬᏛᎾ, ᎾᎿᎢ ᎠᎴ ᎤᏙᎯᏳ ᎦᏲᎵ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᏩᎶᏏ Ꮎ ᎢᎬᏱᏗᏢ ᎠᎩᏍᏗ ᏗᎦᎪᎯᏗ.<ref>Silva, H. R.| coauthors=Britto-Pereira M. C., ᎠᎴ Caramaschi U.| year=1989| title=Frugivory and Seed Dispersal by ''Hyla truncata'', a Neotropical Treefrog| journal=Copeia| volume=1989(3)| pages=781–783}}</ref> ᎤᏔᎾ ᏩᎶᏏ ᎠᎴ ᎤᏅᏌ preyed ᎾᏍᎩ ᎾᎥᎢ [[bird|ᏥᏍᏆ]], ᎡᏆ [[fish|ᎠᏣᏗ]], [[snake|ᎢᎾᏛ]], [[otter|ᏥᏯ]], [[fox|ᏧᎳes]], [[badger|ᎤᎫᎾ]], [[coati]], ᎠᎴ ᏐᎢ ᎡᎿᎢ ᎡᎥ. ᏩᎶᏏ ᎠᎴ ᎾᏍᎩ ᎾᏍᏇ ᎦᎳᏅᎯ ᎾᎥᎢ ᏴᏫ (ᎠᎪᏩᏛᏗ ᎾᎿ ᎨᏒ ᎾᎿ [[#Agriculture|ᏗᎦᎶᎪᏗ]], ᎡᎳᏗᏢ).
 
 === ᏗᏟᎶᏍᏔᏅ ===
-ᏌᏊ ᎢᏳᏩᎫᏗ ᎤᏔᎾ ᏩᎶᏏ ᎠᏙᏯᏅᎯᏗᏍᏗ ᎤᏩᎾᏐᎲᎯ, ᎤᏅᏌ ᏫᎵ ᎠᏓᏟᏐᏗ ᎾᎾᎢ ᎠᎹ ᏗᏓᎴᎲᏍᎬ ᏯᏛᎿ ᏥᏄᏍᏗ ᎥᏓᎵ ᎠᎴ ᎤᏪᏴᎢ ᎠᏂᏁᏉᎬ. ᎤᎪᏗᏗ ᏩᎶᏏ ᎥᎦᎷᏨ ᎯᎠ ᏗᏂᏰᎸ ᎠᎹ ᎭᏢᏃ ᎤᏅᏌ ᎨᏒᎩ ᎤᏕᏅ, ᎢᏳᏓᎵᎭ ᏄᎵᏍᏔᏅ ᎭᏫᎾᏗᏢ ᎾᏕᏘᏴᎯᏒ ᎥᎢᏒᎢ involving ᎯᎸᏍᎩ ᎢᏯᎦᏴᎵ ᏩᎶᏏ. ᎭᏫᎾᏗᏢ ᎦᏙᎯ Europe, ᎡᏆ ᎢᎦᏘᎭ migrating ᏩᎶᏏ ᎬᏔᏅᎯ ᎠᏲᎱᎯᏍᏗ ᎾᎿ ᏕᎦᏅᏅ, ᎤᏓᎷᎸ ᎤᏤᎵᏛ ᎠᏐᏴ ᎠᎴ ᎧᏂᎬᎾᎥ ᎨᏒᎩ ᎤᏁᏍᎨᎲ ᎾᏍᎩᎾᎢ ᎠᏂ.
+ᏌᏊ ᎢᏳᏩᎫᏗ ᎤᏔᎾ ᏩᎶᏏ ᎠᏙᏯᏅᎯᏗᏍᏗ ᎤᏩᎾᏐᎲᎯ, ᎤᏅᏌ ᏫᎵ ᎠᏓᏟᏐᏗ ᎾᎾᎢ ᎠᎹ ᏗᏓᎴᎲᏍᎬ ᏯᏛᎿ ᏥᏄᏍᏗ ᎥᏓᎵ ᎠᎴ ᎤᏪᏴᎢ ᎠᏂᏁᏉᎬ. ᎤᎪᏗᏗ ᏩᎶᏏ ᎥᎦᎷᏨ ᎯᎠ ᏗᏂᏰᎸ ᎠᎹ ᎭᏢᏃ ᎤᏅᏌ ᎨᏒᎩ ᎤᏕᏅ, ᎢᏳᏓᎵᎭ ᏄᎵᏍᏔᏅ ᎭᏫᎾᏗᏢ ᎾᏕᏘᏴᎯᏒ ᎥᎢᏒᎢ involving ᎯᎸᏍᎩ ᎢᏯᎦᏴᎵ ᏩᎶᏏ. ᎭᏫᎾᏗᏢ ᎦᏙᎯ [[Europe|ᏳᎳᏛᎶᎶ, ᎡᏆ ᎢᎦᏘᎭ migrating ᏩᎶᏏ ᎬᏔᏅᎯ ᎠᏲᎱᎯᏍᏗ ᎾᎿ ᏕᎦᏅᏅ, ᎤᏓᎷᎸ ᎤᏤᎵᏛ ᎠᏐᏴ ᎠᎴ ᎧᏂᎬᎾᎥ ᎨᏒᎩ ᎤᏁᏍᎨᎲ ᎾᏍᎩᎾᎢ ᎠᏂ.
 
 [[File:Bufo bufo couple during migration(2005).jpg|thumb|left|190px|ᎠᏍᎦᏯ ᎠᎴ ᎠᎨᏴ [[Common toad|ᏧᏣᏔᏊ ᏩᎶᏏ]] (''Bufo bufo'') ᎭᏫᎾᏗᏢ [[amplexus]]]]
 ᏌᏊ ᎢᏳᏩᎫᏗ ᎾᎾᎢ ᎯᎠ ᎧᏁᏉᏍᎬ ᎦᏙᎯ, ᎠᏍᎦᏯ ᏩᎶᏏ ᎤᏯᏅᏛ ᎠᎦᏎᏍᏙᏗ ᎤᎾᎵᎪᎯ, ᏂᎦᏛ ᏗᎾᏙᎳᎩ ᎠᏠᏯᏍᏗ ᏩᎶᏏ. ᎯᎠ ᎤᏯᏅᏛ ᎨᏒᎢ ᏧᏓᎴᎿᎢ ᎯᎠ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ, ᎠᎴ ᏫᎵ ᎠᎦᏎᏍᏙᏗ ᎠᎨᏴ Ꮎ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ. ᎢᎦᏛ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᎤᎭ ᎤᎾᏓᏡᎩ ᎠᏍᎦᏯ ᎦᎪ ᎿᏛᎦ ᎾᏍᎩ ᏂᎨᏒᎾ ᎤᏯᏅᏛ, ᎠᎴ ᎤᎵᏍᎪᎸᏔᏅ ᎠᎨᏴ Ꮎ ᎠᎴ ᎤᎾᏄᎪᎢᏍᏗ ᏓᏯᏂᏍᎬ ᎠᏍᎦᏯ.
@@ -133,7 +133,7 @@
 
 ᎯᎠ ᎢᎬᏱᏗᏢᏍᏗ ᎤᎾᏅᏛ proto-ᏩᎶᏏ ᎨᏒᎢ ''[[Triadobatrachus]] massinoti'', ᏂᏛᎴᏅᏓ ᎯᎠ ᎢᎬᏱ [[Triassic]] [[Madagascar]]. ᎾᏍᎩ ᎨᏒᎢ ᎬᏩᏚᏫᏛ 250 ᎢᏳᏆᏗᏅᏓ ᏧᏕᏘᏴᏓ ᎠᎦᏴᎵ, ᎠᎴ ᎠᏰᎲ ᎾᏍᎩ ᏂᎨᏒᎾ ᎩᎳ ᏚᏙᎳᏩᏛᎲ ᎯᎠ ᎧᎵ ᎤᎾᏓᏟᏌᏅ ᏄᏍᏛ ᏗᎨᎦᏃᏗ ᎾᏊ ᎤᎾᎵᎪᏅᎯ ᎬᏙᏗ ᏩᎶᏏ. ᎯᎠ ᎣᏓᏅᏛ ᎨᏒᎢ ᏩᎶᏏ-ᎾᏍᎩᏯᎢ, ᎠᎴᏂᏙᎲ ᎠᏯᏖᎾ ᎬᏙᏗ ᎡᏆ ᎠᎦᏙᎵ ᏧᎬᏩᎶᏗ ᎠᎦᏘᏯ, ᎠᎴ ᎯᎠ ᎢᏳᏕᏘᏴᏓ ᎤᎭ ᏎᏍᏗ ᏐᎢ ᏄᏍᏛ ᏗᎨᎦᏃᏗ ᎤᏣᏘᎾ ᏂᏛᎴᏅᏓ ᎪᎯᏊ ᎢᏴ ᏥᎩ amphibia. ᎾᏍᎩ ᎯᎠ ᎠᏠᏯᏍᏛ ᏄᏓᎴᎿᎥ [[ilium]], ᎦᏅᎯᏓᎨ ᎠᏰᎸ ᎬᏙᏗ ᎤᏟ ᎢᎦᎢ [[vertebrae]], ᎠᎴ ᏧᏓᎴᎿᎢ vertebrae ᎭᏫᎾᏗᏢ Ꮝ ᎦᏂᏓᏛ (ᎠᎦᏎᏍᏙᏗ ᎭᏫᎾᏗᏢ ᎪᎯᏊ ᎢᏴ ᏥᎩ ᏩᎶᏏ, ᎯᎠ ᎦᏂᏓᏛ vertebrae ᎠᎴ fused, ᎠᎴ ᎤᎾᏅᏛ ᏥᏄᏍᏗ ᎯᎠ ''urostyle'' ᎠᎴ ''coccyx''). ᎯᎠ [[tibia]] ᎠᎴ [[fibula]] ᎤᎵᏬᏨᎯ ᎠᎴ unfused ᎠᎴ ᏧᏓᎴᎿᎢ, ᎠᏃᏢᏍᎬ ᎾᏍᎩ ᏰᎵᏊ Ꮎ Triadobatrachus ᏥᏄᏍᏛᎩ ᎾᏍᎩ ᏂᎨᏒᎾ ᎠᏏᎾᏍᏛ leaper.
 
-ᏄᏓᎴ ᎢᏳᏕᏘᏴᏓ ᏩᎶᏏ, ᎪᎷᏩᏛᏓ ᎭᏫᎾᏗᏢ [[Arizona]] ᎠᎴ ᎤᏯᏅᎲ ''[[Prosalirus]] bitis'', ᏥᏄᏍᏛᎩ uncovered ᎭᏫᎾᏗᏢ 1985, ᎠᎴ ᏕᎪᏪᎸ ᎢᏳ ᎢᎪᎯ ᏂᏛᎴᏅᏓ ᎾᎥᏂᎨᏍᏙᏗ ᎯᎠ ᎤᏠᏱ ᎢᏳᏩᎪᏗ ᏥᏄᏍᏗ ''Triadobatrachus''. ᎾᏍᎩᏯᎢ ''Triadobatrachus'', ''Prosalirus'' ᏄᏛᏁᎸ ᎾᏍᎩ ᏂᎨᏒᎾ ᎤᎭ ᏰᎵ ᎡᏆᏯ ᎤᏂᎪᏗᏗ ᏗᏂᏅᏍᎨᏂ, ᎠᎴ ᎠᏰᎲ ᎯᎠ ᏫᏚᏳᎪᏛ ᏦᎢ-pronged [[pelvic]] ᎠᏛᎯᏍᏙᏗ. ᏧᏓᎴᎿᎢ ''Triadobatrachus'', ''Prosalirus'' ᎠᏰᎲ ᎦᏳᎳ ᎤᎴᎾᎯᏛ ᎾᎥᏂᎨᏍᏗ ᏂᎦᏛ Ꮝ ᎦᏂᏓᏛ.
+ᏄᏓᎴ ᎢᏳᏕᏘᏴᏓ ᏩᎶᏏ, ᎪᎷᏩᏛᏓ ᎭᏫᎾᏗᏢ [[Arizona|ᎡᏩᏐᎾ]] ᎠᎴ ᎤᏯᏅᎲ ''[[Prosalirus]] bitis'', ᏥᏄᏍᏛᎩ uncovered ᎭᏫᎾᏗᏢ 1985, ᎠᎴ ᏕᎪᏪᎸ ᎢᏳ ᎢᎪᎯ ᏂᏛᎴᏅᏓ ᎾᎥᏂᎨᏍᏙᏗ ᎯᎠ ᎤᏠᏱ ᎢᏳᏩᎪᏗ ᏥᏄᏍᏗ ''Triadobatrachus''. ᎾᏍᎩᏯᎢ ''Triadobatrachus'', ''Prosalirus'' ᏄᏛᏁᎸ ᎾᏍᎩ ᏂᎨᏒᎾ ᎤᎭ ᏰᎵ ᎡᏆᏯ ᎤᏂᎪᏗᏗ ᏗᏂᏅᏍᎨᏂ, ᎠᎴ ᎠᏰᎲ ᎯᎠ ᏫᏚᏳᎪᏛ ᏦᎢ-pronged [[pelvic]] ᎠᏛᎯᏍᏙᏗ. ᏧᏓᎴᎿᎢ ''Triadobatrachus'', ''Prosalirus'' ᎠᏰᎲ ᎦᏳᎳ ᎤᎴᎾᎯᏛ ᎾᎥᏂᎨᏍᏗ ᏂᎦᏛ Ꮝ ᎦᏂᏓᏛ.
 
 ᎯᎠ ᎢᎬᏱᏗᏢᏍᏗ ᎤᏙᎯᏳ ᏩᎶᏏ ᎨᏒᎢ '''''Vieraella herbsti''''', ᏂᏛᎴᏅᏓ ᎯᎠ ᎢᎬᏱ [[Jurassic]] (188–213 Mya). ᎾᏍᎩ ᎨᏒᎢ ᎤᎾᏅᏛ ᎾᏍᎩ ᎤᏩᏒ ᏂᏛᎴᏅᏓ ᎯᎠ [[dorsal|ᎣᏂᏗᏢ]] ᎠᎴ [[ventral]] ᏗᏓᏕᏲᎲᏍᎩ ᏏᏴᏫ ᎦᏂᏝᎢ ᎠᎴ ᏥᏄᏍᏛᎩ ᎠᎦᏎᏍᏔᏅ ᎾᏍᏋ 33&nbsp;mm ᎭᏫᎾᏗᏢ ᏂᎯ-ᎠᏍᏚᎢᏍᎬ ᏂᎦᏅᎯᏒ.  '''''Notobatrachus degiustoi''''' ᏂᏛᎴᏅᏓ ᎯᎠ ᎠᏰᎵ Jurassic ᎨᏒᎢ ᎠᏍᏓᏩᏛᏍᏗ ᎠᏲᎵᎨ, ᎬᏩᏚᏫᏛ 155–170 ᎢᏳᏆᏗᏅᏓ ᏧᏕᏘᏴᏓ ᎠᎦᏴᎵ. ᎾᏍᎩ ᎨᏒᎢ ᏄᏓᎷᎸᎾ Ꮎ ᎯᎠ ᎠᏓᎴᏂᏍᎬ ᎪᎯᏊ ᎢᏴ ᏥᎩ Anura ᏥᏄᏍᏛᎩ ᎠᏍᏆᏙᏅᎯ ᎾᎥᎢ ᎯᎠ Jurassic ᎠᎴᏫᏍᏙᏗ. ᎯᎠ ᏄᎬᏫᏳᏒ evolutionary ᏗᎦᏁᏟᏴᏍᏗ ᎤᏠᏯᏍᏔᏅ ᎯᎠ ᎠᎦᏲᎳᏗᏍᏗ ᎯᎠ ᎠᏰᎸ ᎠᎴ ᎯᎠ ᎤᏲᎱᏎᎸ ᎯᎠ ᎦᏂᏓᏛ.
 
@@ -149,7 +149,7 @@
 ᏩᎶᏏ ᎠᎴ ᎬᏔᏅᎯ ᎭᏫᎾᏗᏢ cloning ᏅᎠᏯᏍᏗ ᎠᎴ ᏐᎢ ᏚᏩᏂᎦᎸ [[embryology]] ᎢᎬᏂᏏᏍᎩ ᏩᎶᏏ ᎠᎴ ᏄᎾᏛᏅ ᎯᎠ closest ᎠᎴᏂᏙᎲ ᎦᏃᏢᏥᏙᎯ ᎠᏍᎦᏯ ᎦᎷᎶᎩ ᎤᏪᏥ ᎤᏯᏍᎦ ᎨᎦᏓᏅᏖᏗ ᎤᎪᏗᏗ ᏐᎢ vertebrates, ᎠᎴ ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ ᎠᏛᏅᎢᏍᏔᏅ ᏄᏍᏛ ᏗᎧᏃᏗ ᎢᎬᏱ ᏚᏙᎳᏩᏛᎲ. ᎾᏍᎩ ᎤᏁᎳᎩ ᏅᎪᏢᎯᏐᏗᏱ ᏥᏍᏚ ᎠᎦᏛᏗ ᏄᏍᏛ ᎤᎭ ᏭᏪᏙᎢ ᎤᏙᎷᏩᏛᏓ, biologists ᎬᎵᏱᎵᏒ ᎬᏙᏗ ''Xenopus'' ᏥᏄᏍᏗ [[model organism|ᏗᏟᎶᏍᏙᏗ ᎠᏓᏁᎳᏅᎯ]] ᎭᏫᎾᏗᏢ [[developmental biology|developmental ᎤᎾᏙᏢᎯ]] ᎢᎬᏂᏏᏍᎩ ᎾᏍᎩ ᎨᏒᎢ ᏩᎾᎯᎨᏍᏙᏗ ᎠᏛᎯᏍᏙᏗ ᎭᏫᎾᏗᏢ ᎠᎨᏔᏗᏍᏗ ᎠᎴ ᎤᎭ ᎡᏆ ᎠᎴ ᎠᎯᏗᎨᎢ manipulatable ᏂᎬᏂᏏᏍᎬ. ᏝᏱᎪᎯᎩ, ''X. laevis'' ᎨᏒᎢ ᎧᏁᏉᏤᎩ ᎠᎴᏂᏙᎲ ᎠᎲᏏᏓᏍᏗ ᎾᎥᎢ Ꮝ ᎠᏂᎦᏲᎵ ᎦᏃᏢᏥᏙᎯ ''X. tropicalis'', ᎦᏙ ᎤᏍᏗ ᎠᏙᏯᏅᎯᏗᎠ Ꮝ ᎠᏤᎯᏐᏗᏱ ᎢᏳᏕᏘᏴᏓ ᎭᏫᎾᏗᏢ ᎯᏍᎩ ᎢᏯᏅᏓ ᎤᏟ ᎬᏰᎸᏗ ᎬᎾᏬᏍᎬ ᏌᏊ ᏔᎵ ᏧᏕᏘᏴᏓ (ᏥᏄᏍᏗ ᎭᏫᎾᏗᏢ ''X. laevis''),<ref>[http://grants.nih.gov/grants/guide/rfa-files/RFA-HD-01-008.html "Developing the potential of ''Xenopus tropicalis'' as a genetic model."] (2006-03-09)</ref> facilitating ᎦᏣᏄᎳᎯᎨ ᏗᎦᏎᏍᏙᏗ ᏗᎦᎾᏗᎯᏍᏗ ᎤᎾᏁᎶᏔᏅ. ᎯᎠ [[genome project|genome ᎠᏍᏓᏩᏗᏒ]] ''X. tropicalis'' ᏫᎵ ᏄᏓᎷᎸᎾ ᎾᏍᏋ ᎠᏍᏆᏙᏅᎯ ᎾᎥᎢ 2015 ᎾᎾᎢ ᎯᎠ ᎣᏂᏴᎯᎨᏍᏙᏗ.<ref>{{cite web | title=Joint Genome Institute - ''Xenopus tropicalis'' Home | url=http://genome.jgi-psf.org/Xentr4/Xentr4.home.html | accessdate=2006-03-03 }}</ref>
 
 == ᏩᎶᏏ ᎭᏫᎾᏗᏢ ᎤᏂᎸᏉᏗ ᎥᎦᏔᎲᎢ ==
-ᏩᎶᏏ ᏄᏍᏛ ᏗᎧᏃᏗ ᏂᎬᎢ ᎭᏫᎾᏗᏢ [[folklore|ᎤᏁᎳᏅᎯ]], [[fairy tale|ᏱᏁᎯ ᎠᏓᏃᎮᏗ]] ᎠᎴ ᎤᏂᎸᏉᏗ ᎥᎦᏔᎲᎢ. ᎤᏅᏌ ᏫᏚᏳᎪᏛ ᎾᏍᏋ portrayed ᏥᏄᏍᏗ ᎬᏂᎦᎵᏍᏗ, ᎤᏁᎩᎸᏗ, ᎠᏓᏲᏍᏓᏁᏗ, ᎠᎴ ᎬᏙᏗ ᎬᏍᎦᎸ ᎠᏏᎾᏒᎢ. ᏱᏓᏟᎶᏍᏔᏅ ᎠᏠᏯᏍᏛ [[Michigan J. Frog|Michigan J. ᏩᎶᏏ]], [[The Frog Prince (Story)|ᎯᎠ ᏩᎶᏏ ᎤᎬᏫᏳᎯ ᎤᏪᏥ ᎠᏫᏄᏥ]], ᎠᎴ [[Kermit the Frog|Kermit Ꮎ ᏩᎶᏏ]]. Michigan J. ᏩᎶᏏ, featured ᎭᏫᎾᏗᏢ Warner ᎠᎾᏓᏅᏟ ᎠᏂᎶᏁᏍᎬ, ᎾᏍᎩ ᎤᏩᏒ ᎢᏯᏛᏁᏗ ᎤᏤᎵ ᏓᏂᏃᎩᏍᎬ ᎠᎴ ᎠᎾᎳᏍᎩᏍᎬ ᎤᏩᎪᏘᎶᏛ ᎾᏍᎩᎾᎢ ᎤᏤᎵ ᎤᏤᎵᎢ. ᏌᏊ ᎢᏳᏩᎫᏗ ᏄᏓᎴ ᎠᏏᏴᏫ ᎠᎦᏘᎭ ᎾᎾᎢ ᎾᏍᎩ ᎠᏍᎦᏯ, ᎾᏍᎩ ᎠᏍᎦᏯ ᏫᎵ ᎥᎦᎷᏨ ᏩᎶᏏ-ᎾᏍᎩᏯᎢ ᎠᏓᎳᏍᏛᏁᏗ, ᎠᎴ ᎠᎴᏅᏗ ᏓᏯᏂᏍᎬ. "ᎯᎠ ᏩᎶᏏ ᎤᎬᏫᏳᎯ ᎤᏪᏥ ᎠᏫᏄᏥ" ᎨᏒᎢ ᏱᏁᎯ ᎠᏓᏃᎮᏗ ᏩᎶᏏ ᎦᎪ ᎠᎦᏔᎲᎠ ᎾᎾᎯ ᎤᎵᎶᎯ ᎤᎬᏫᏳᎯ ᎤᏪᏥ ᎠᏫᏄᏥ ᏌᏊ ᎢᏳᏩᎫᏗ [[kiss|ᎠᏓᏔᏪᏙᏗ]] ᎦᎾᏄᎪᏫᏒ. Kermit ᎯᎠ ᏩᎶᏏ, ᎾᎿ ᎯᎠ ᏐᎢ ᎤᏬᏰᏂ, ᎨᏒᎢ ᎠᏓᏅᏖᎯᎶᏍᎩ ᎠᎴ disciplined ᎠᎦᏓᏅᏖᏗ ''[[Sesame Street|Sesame ᎦᎳᏅᏛ]]'' ᎠᎴ ''[[The Muppet Show|ᎯᎠ Muppet ᎤᎾᏛᏁᎸᏗ]]''; ᎾᎯᏳᎢ ᎬᏩᎵᏍᏚᎢᏛ ᎤᎾᎵᎢᏴ ᎠᎴ ᏰᎵ ᎡᏆᏯ ᎠᏏᎾᏒᎢ, ᎾᏍᎩ ᎠᏍᎦᏯ ᎨᏒᎢ ᎢᏳᏓᎵᎭ portrayed ᏥᏄᏍᏗ ᎡᎳᏗ ᎾᏅᎡᏁᎲ ᎾᎾᎢ ᎯᎠ ᎢᏰᎵᏍᏗᎢ behavior ᎤᏟ ᎢᎦᎢ flamboyant ᎠᎦᏓᏅᏖᏗ.
+ᏩᎶᏏ ᏄᏍᏛ ᏗᎧᏃᏗ ᏂᎬᎢ ᎭᏫᎾᏗᏢ [[folklore|ᎤᏁᎳᏅᎯ]], [[fairy tale|ᏱᏁᎯ ᎠᏓᏃᎮᏗ]] ᎠᎴ ᎤᏂᎸᏉᏗ ᎥᎦᏔᎲᎢ. ᎤᏅᏌ ᏫᏚᏳᎪᏛ ᎾᏍᏋ portrayed ᏥᏄᏍᏗ ᎬᏂᎦᎵᏍᏗ, ᎤᏁᎩᎸᏗ, ᎠᏓᏲᏍᏓᏁᏗ, ᎠᎴ ᎬᏙᏗ ᎬᏍᎦᎸ ᎠᏏᎾᏒᎢ. ᏱᏓᏟᎶᏍᏔᏅ ᎠᏠᏯᏍᏛ [[Michigan J. Frog|ᎻᏏᎦᏂ Ꮴ. ᏩᎶᏏ]], [[The Frog Prince (Story)|ᎯᎠ ᏩᎶᏏ ᎤᎬᏫᏳᎯ ᎤᏪᏥ ᎠᏫᏄᏥ]], ᎠᎴ [[Kermit the Frog|Kermit Ꮎ ᏩᎶᏏ]]. Michigan J. ᏩᎶᏏ, featured ᎭᏫᎾᏗᏢ Warner ᎠᎾᏓᏅᏟ ᎠᏂᎶᏁᏍᎬ, ᎾᏍᎩ ᎤᏩᏒ ᎢᏯᏛᏁᏗ ᎤᏤᎵ ᏓᏂᏃᎩᏍᎬ ᎠᎴ ᎠᎾᎳᏍᎩᏍᎬ ᎤᏩᎪᏘᎶᏛ ᎾᏍᎩᎾᎢ ᎤᏤᎵ ᎤᏤᎵᎢ. ᏌᏊ ᎢᏳᏩᎫᏗ ᏄᏓᎴ ᎠᏏᏴᏫ ᎠᎦᏘᎭ ᎾᎾᎢ ᎾᏍᎩ ᎠᏍᎦᏯ, ᎾᏍᎩ ᎠᏍᎦᏯ ᏫᎵ ᎥᎦᎷᏨ ᏩᎶᏏ-ᎾᏍᎩᏯᎢ ᎠᏓᎳᏍᏛᏁᏗ, ᎠᎴ ᎠᎴᏅᏗ ᏓᏯᏂᏍᎬ. "ᎯᎠ ᏩᎶᏏ ᎤᎬᏫᏳᎯ ᎤᏪᏥ ᎠᏫᏄᏥ" ᎨᏒᎢ ᏱᏁᎯ ᎠᏓᏃᎮᏗ ᏩᎶᏏ ᎦᎪ ᎠᎦᏔᎲᎠ ᎾᎾᎯ ᎤᎵᎶᎯ ᎤᎬᏫᏳᎯ ᎤᏪᏥ ᎠᏫᏄᏥ ᏌᏊ ᎢᏳᏩᎫᏗ [[kiss|ᎠᏓᏔᏪᏙᏗ]] ᎦᎾᏄᎪᏫᏒ. Kermit ᎯᎠ ᏩᎶᏏ, ᎾᎿ ᎯᎠ ᏐᎢ ᎤᏬᏰᏂ, ᎨᏒᎢ ᎠᏓᏅᏖᎯᎶᏍᎩ ᎠᎴ disciplined ᎠᎦᏓᏅᏖᏗ ''[[Sesame Street|Sesame ᎦᎳᏅᏛ]]'' ᎠᎴ ''[[The Muppet Show|ᎯᎠ Muppet ᎤᎾᏛᏁᎸᏗ]]''; ᎾᎯᏳᎢ ᎬᏩᎵᏍᏚᎢᏛ ᎤᎾᎵᎢᏴ ᎠᎴ ᏰᎵ ᎡᏆᏯ ᎠᏏᎾᏒᎢ, ᎾᏍᎩ ᎠᏍᎦᏯ ᎨᏒᎢ ᎢᏳᏓᎵᎭ portrayed ᏥᏄᏍᏗ ᎡᎳᏗ ᎾᏅᎡᏁᎲ ᎾᎾᎢ ᎯᎠ ᎢᏰᎵᏍᏗᎢ behavior ᎤᏟ ᎢᎦᎢ flamboyant ᎠᎦᏓᏅᏖᏗ.
 
 == Cited ᏫᏓᏎᎸᎢ ==
 {{reflist}}
