--- a/ᎧᏃᎮᏙᏗ.mw
+++ b/ᎧᏃᎮᏙᏗ.mw
@@ -41,7 +41,7 @@ Morse ᎨᏥᏃᎯᏎᏗ ᎠᎴ ᏂᎦᎥᏊ transmitted ᎾᎥᎢ ᎤᏬᏰᏂ-
 
 Morse ᎠᏍᏓᏩᏛᏍᏙᏗ ᎨᏒᎢ ᎾᏍᎩ ᎾᏍᏇ ᎤᏙᎯᏳ ᎤᏂᎸᏉᏗ ᏄᎾᏛᏅ [[QRP operation|QRP ᎠᏅᏬᏗ]] ᎾᏍᎩᎾᎢ enabling ᎤᏙᎯᏳ ᎦᏅᎯᏓ ᎾᎿ ᎢᏴᎢ, ᎡᎳᏗ-ᎤᎳᏂᎬᎬ ᏗᏛᎪᏔᏅ. Readability ᏰᎵᏇ ᎾᏍᏋ ᏗᏍᏆᎸᏙᏗ ᎾᎥᎢ ᎠᎨᏲᏅᎯ ᎠᏅᏬᏗ ᎢᏧᎳᎭ ᎯᎳᎪ ᎢᏳ ᎯᎠ ᏂᎬᎢ ᎨᏒᎢ ᎾᏍᎩ ᎤᏩᏒ ᎠᏍᏓᏩᏛᏍᏗ ᎤᏃᏴᎬ. ᎪᎯ ᎨᏒᎢ ᎤᏍᏆᎸᎲ ᎯᎠ ᏯᏛᎾ ᎤᏙᎯᏳ Ꮎ ᎯᎠ transmitted ᏄᎵᏂᎬᎬ ᎨᏒᎢ concentrated ᎾᎾᎯ ᎤᏙᎯᏳ ᎤᏍᏗ [[bandwidth]], ᎠᏃᏢᏍᎬ ᎾᏍᎩ ᏰᎵᏊ ᎬᏙᏗ ᎠᏯᏙᎵ ᏧᎬᏩᎶᏗ ᎠᎦᏘᏯ ᎢᏳᏍᏗ ᎧᏃᎮᏗ, Ꮎ ᎦᎾᎯᏍᏙᏗ ᎠᎴ ᎪᏣᎴᏍᏗᏱ ᏂᏓᏙᎳᎬᎾ ᎾᎿ nearby frequencies. ᎯᎠ ᎠᏯᏙᎵ ᏂᎬᎢ bandwidth ᎾᏍᎩ ᎾᏍᏇ ᎠᎩᏍᎪᎢ ᎠᏜᏅᎠᏓᏗᏍᎬ ᎯᎠ ᏂᎬᏩᏍᏛ aural selectivity ᎯᎠ ᏴᏫ ᎤᏅᏥᏓ, ᎤᏗᏗᏢ enhancing ᎤᏓᏂᎳ ᏂᎬᎢ readability.
 
-ᎭᏫᎾᏗᏢ ᎯᎠ [[United States|ᎠᎹᏰᏟ]] ᎢᏳᏩᎪᏗ 1991, ᎬᏂᎨᏒ ᎾᏅᏁᎲ ᎯᎠ ᏅᏏᎾᏒ ᎠᏓᏅᏍᏗ ᎠᎴ ᎠᎩᏍᏗ Morse ᎠᏍᏓᏩᏛᏍᏙᏗ ᎾᎾᎢ 5 ᎤᏂᏁᏨ ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ ᎢᏯᏔᏬᏍᏔᏅ (WPM) ᏥᏄᏍᏛᎩ ᎧᏁᏨ ᎢᏯᏛᏁᏗ ᎠᎩᏍᏗ [[Federal Communications Commission|FCC]] ᎠᎴᏂᏍᎩ ᎦᏬᏂᏍᎩ ᎪᏪᎵ ᎠᎵᏍᎪᎸᏗᏍᎩ. ᎬᏂᎨᏒ ᎾᏅᏁᎲ ᎪᎯ ᏅᏏᎾᏒ ᎨᏒᎢ ᏙᎢ ᎧᏁᏨ ᎢᏯᏛᏁᏗ ᎾᏍᎩᎾᎢ ᎯᎠ ᎠᏜᏅᏓᏗᏍᎬ ᎬᏙᏗ ᎯᎠ [[High frequency|HF ᎦᏚ ᎠᏄᏬᏍᏗ]]. ᎢᏳᏩᎪᏗ 2000, ᎥᎦᏔᎲᎢ ᎾᎾᎢ ᎯᎠ 20 WPM ᎤᏩᎾᏕᏍᎩ ᏥᏄᏍᏛᎩ ᎧᏁᏨ ᎢᏯᏛᏁᏗ ᎠᎩᏍᏗ ᎯᎠ ᏩᎦᎸᎳᏗᏴ ᎤᏩᎾᏕᏍᎩ ᎠᎴᏂᏍᎩ ᎪᏪᎵ ᎠᎵᏍᎪᎸᏗᏍᎩ (ᎤᏤᎵᏛ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ); ᎢᏳᎵᏍᏙᏗᏱ ᎫᏬᏂ 15, 2000, ᎯᎠ FCC ᎠᎦᏲᎳᏛᎯ ᎯᎠ ᎤᏤᎵᏛ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᎤᎵᏁᏨ ᎢᏯᏛᏁᏗ 5 WPM.<ref>{{cite book | title=1998 Biennial Regulatory Review — Amendment of Part 97 of the Commission's Amateur Service Rules. | url=http://www.arrl.org/announce/regulatory/wt98-143ro.pdf | accessdate=December 4 | accessyear=2005 }}</ref>
+ᎭᏫᎾᏗᏢ ᎯᎠ [[United States|ᎠᎹᏰᏟ]] ᎢᏳᏩᎪᏗ 1991, ᎬᏂᎨᏒ ᎾᏅᏁᎲ ᎯᎠ ᏅᏏᎾᏒ ᎠᏓᏅᏍᏗ ᎠᎴ ᎠᎩᏍᏗ Morse ᎠᏍᏓᏩᏛᏍᏙᏗ ᎾᎾᎢ 5 ᎤᏂᏁᏨ ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ ᎢᏯᏔᏬᏍᏔᏅ (WPM) ᏥᏄᏍᏛᎩ ᎧᏁᏨ ᎢᏯᏛᏁᏗ ᎠᎩᏍᏗ [[Federal Communications Commission|FCC]] ᎠᎴᏂᏍᎩ ᎦᏬᏂᏍᎩ ᎪᏪᎵ ᎠᎵᏍᎪᎸᏗᏍᎩ. ᎬᏂᎨᏒ ᎾᏅᏁᎲ ᎪᎯ ᏅᏏᎾᏒ ᎨᏒᎢ ᏙᎢ ᎧᏁᏨ ᎢᏯᏛᏁᏗ ᎾᏍᎩᎾᎢ ᎯᎠ ᎠᏜᏅᏓᏗᏍᎬ ᎬᏙᏗ ᎯᎠ [[High frequency|HF ᎦᏚ ᎠᏄᏬᏍᏗ]]. ᎢᏳᏩᎪᏗ 2000, ᎥᎦᏔᎲᎢ ᎾᎾᎢ ᎯᎠ 20 WPM ᎤᏩᎾᏕᏍᎩ ᏥᏄᏍᏛᎩ ᎧᏁᏨ ᎢᏯᏛᏁᏗ ᎠᎩᏍᏗ ᎯᎠ ᏩᎦᎸᎳᏗᏴ ᎤᏩᎾᏕᏍᎩ ᎠᎴᏂᏍᎩ ᎪᏪᎵ ᎠᎵᏍᎪᎸᏗᏍᎩ (ᎤᏤᎵᏛ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ); ᎢᏳᎵᏍᏙᏗᏱ ᎫᏬᏂ 15, 2000, ᎯᎠ FCC ᎠᎦᏲᎳᏛᎯ ᎯᎠ ᎤᏤᎵᏛ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᎤᎵᏁᏨ ᎢᏯᏛᏁᏗ 5 WPM.<ref>{{cite book | title=1998 Biennial Regulatory Review — Amendment of Part 97 of the Commission's Amateur Service Rules. | url=http://www.arrl.org/announce/regulatory/wt98-143ro.pdf | accessdate=ᎤᏍᎩᏱ 4 | accessyear=2005 }}</ref>
 
 ᎯᎠ ᎡᎶᎯ Radiocommunication ᏓᎾᎵᏃᎮᏍᎬᎢ 2003 (WRC-03) ᎪᏢᏅᎯ ᏫᎵ ᎯᎠ ᎠᏰᎵ ᏚᎾᏙᏢᏒ Morse ᎠᏍᏓᏩᏛᏍᏙᏗ ᎤᎵᏁᏨ ᎢᏯᏛᏁᏗ ᎾᏍᎩᎾᎢ ᎠᎴᏂᏍᎩ ᎦᏬᏂᏍᎩ licensing. ᎾᎥᏂᎨᏍᏙᏗ ᎦᏲᎵ ᎠᏰᎵ ᏚᎾᏙᏢᏩᏗᏒ ᎠᏍᏓᏩᏗᏒ ᎠᎲᏓ ᎯᎠ morse ᎤᎵᏁᏨ ᎢᏯᏛᏁᏗ ᏂᏛᎴᏅᏓ ᎤᎾᏤᎵ license ᏚᎵᏁᏨ ᎢᏯᏛᏁᏗ. ᎭᏫᎾᏗᏢ ᎫᏰᏉᏂ 2005 ᎯᎠ ᏂᎬᎾᏛ ᎠᏰᎵ ᏧᎾᏓᏛᎪᎳᏅ ᎠᏂᎧᎻᏏᏂ ᎦᎴᏴᏔᏅᎯ ᎠᏓᏃᎯᏎᎯ ᎧᏁᎢᏍᏔᏅ Rulemaking Ꮎ, ᎢᏳᏃ ᎪᏢᏅᎯ ᏂᎪᎯᎸ FCC ᎠᏍᏓᏩᏛᏍᏙᏗ, ᏯᏓᎢᏗᏏ ᎪᏣᎴᏍᏗᏱ ᏂᎦᏛ Morse ᎠᏍᏓᏩᏛᏍᏙᏗ ᎠᎦᏛᏗ ᎾᏍᎩᎾᎢ ᎠᎴᏂᏍᎩ ᎦᏬᏂᏍᎩ licensees ᎭᏫᎾᏗᏢ ᎯᎠ ᎠᎹᏰᏟ.  ᏥᏄᏍᏗ ᎬᏙᏗ ᏂᎦᏛ ᎠᏓᏃᎯᏎᎯ rulemaking ᎭᏫᎾᏗᏢ ᎯᎠ [[Administrative Procedures Act|ᏓᎳᏏᏛ ᎠᎯᎸᏍᏗᏱ ᎢᏯᏛᏁᎯ]], ᎾᏍᎩ ᏫᎵ ᎠᎩᏍᏗ ᎢᏳᏩᎪᏗ ᎾᏍᎩᎾᎢ ᎯᎠ ᎠᏍᏓᏩᏛᏍᏙᏗ ᎠᎾᎩᏍᏗ ᎾᎾᎯ ᎢᏳᎵᏍᏙᏗ, ᏥᏄᏍᏗ ᎦᏅᎯᏓ ᎧᏁᎢᏍᏙᏗ ᎠᎴᏫᏍᏙᏗ ᎠᏎ ᎾᏍᏋ ᎠᎦᏎᏍᏔᏅ.  ᎤᎪᏗᏗ ᎤᏚᎩ ᎬᏗ ᎯᎠ ᎠᎴᏫᏍᏙᏗ ᎧᏁᎢᏍᏙᏗ ᎠᎴ ᏗᏟᏴ ᏗᎦᏬᏂᎯᏍᏗ ᎾᏍᏋ ᎠᏥᎡᏗᏱ, ᏥᏄᏍᏗ ᎤᎪᏗᏗ ᎠᎴᏂᏍᎩ ᎠᏅᏬᏗ ᎤᏬᎯᏳ eliminating ᎠᏍᏓᏩᏛᏍᏙᏗ ᎠᎦᏛᏗ ᎾᏍᏋ ᏗᏄᏬ ᏗᎦᏛᏗ ᎠᎴ ᎠᎵᏍᎦᏁᏍᎩ ᎯᎠ ᎤᏩᎫᏗᏗᏒ ᎦᏬᏂᏍᎩ, ᎾᎯᏳᎢ ᎠᏂᏐᎢ ᎤᎳᏂᎩᏗᏳ ᏚᏂᏴ Ꮎ ᎠᏂᏁᎬ ᎢᏯᏛᏁᏗ ᎠᏍᏓᏩᏛᏍᏙᏗ ᎨᏒᎢ outdated, ᎠᎴ ᎤᏍᏆᏂᎪᏗ ᎢᏤ ᎩᎬ ᎠᏥᏄᏉᏫᏍᎬ ᎯᎠ ᎦᎵᏓᏍᏛ.
 
@@ -54,10 +54,10 @@ Morse ᎠᏍᏓᏩᏛᏍᏙᏗ ᎨᏒᎢ ᎾᏍᎩ ᎾᏍᏇ ᎤᏙᎯᏳ ᎤᏂ
 
 ᏥᏄᏍᏗ 2006 ᎠᏓᎾᏅᏗ radiotelegraph ᎪᏪᎵ ᎠᎵᏍᎪᎸᏗᏍᎩ ᎠᎴ ᏙᎢ ᎠᎴᏂᏙᎲ ᎢᏳᏍᏗ ᎧᏃᎮᏓ ᎭᏫᎾᏗᏢ ᎯᎠ ᎠᏫᏒᏗ ᎧᏃᎮᎭ ᎾᎥᎢ ᎯᎠ [[Federal Communications Commission|ᏂᎬᎾᏛ ᎠᏰᎵ ᏧᎾᏓᏛᎪᎳᏅ ᎠᏂᎧᎻᏏᏂ]].  ᎠᏎᎸ ᎢᏗᎬᏁᏗ ᎾᏍᎩᎾᎢ shipboard ᎠᎴ ᎠᎹᏳᎸᏗ ᎤᎴᏫᏍᏗ ᎠᏅᏬᏗ, ᎤᏅᏌ ᎠᎴ awarded ᎠᏔᏲᎯᎯ ᎦᎪ ᎠᎦᏛᎴᎯᏍᏗ ᎪᏪᎳᏅᎯ ᎨᏥᎪᎵᏰᏍᎬ ᎾᎿ ᎠᏓᏌᎳᏙᏗ ᎦᏬᏂᏍᎩ ᎪᎷᏩᏛᏗ ᎠᎴ ᎤᎾᏛᏁᎸᏗ 20 WPM ᎠᏍᏓᏩᏛᏍᏙᏗ ᎥᎦᏔᎲᎢ [this requirement is waived for "old" (20 WPM) Extra Class licensees].  ᏱᏂᎬᏛᎾ, ᎣᏂ ᏧᏩᎫᏛ 1999 ᎯᎠ ᎬᏙᏗ ᎤᎾᏓᏡᎩ ᎠᎴ ᎤᏙᎯᏳ ᎦᎸᎳᏗ ᎠᏍᏓᏩᏛᏍᏙᏗ ᎠᎺᏉᎯ ᏧᎾᏓᏛᎪᎳᏅ ᎢᏯᏛᏁᎵᏓᏍᏗ ([[GMDSS]]) ᎤᎭ ᎠᏏᏴᏫ ᎪᏢᏅᎯ ᎠᏂ ᎠᏗᏅᏓ.    
 
-ᎾᎿ ᎠᎾᏍᎬᏘ 24, 2004, ᎯᎠ 160th ᎤᏕᏘᏱᏍᎬ ᎯᎠ ᎢᎬᏱ ᎦᏣᏄᎳ ᏫᏓᏲᎯᏍᏗ, ᎯᎠ [[International Telecommunication Union|ITU]] ᎦᏟᏌᏅᎯ ᎯᎠ "@" (ᎯᎠ "[[commercial at|ᎠᏓᎾᏅᏗ ᎾᎾᎢ]]" ᎠᎴ "commat") ᎠᎦᏓᏅᏖᏗ ᎯᎠ Morse ᎠᎦᏓᏅᏖᏗ ᎠᏫᏒᏗ ᎠᎴ ᎨᏒᎢ ᎯᎠ ᎩᎶ ᏂᏓᏳᏅᏅ ᎪᏪᎵ "AC" (ᏄᏓᎷᎸᎾ ᎢᏯᏓᏛᏁᏗ "[T] C[OMMERCIAL]" ᎠᎴ ᎯᎠ ᎩᎶ ᏂᏓᏳᏅᏅ ᎪᏪᎵ "" ᎭᏫᎾᏗᏢ ᎯᎠ swirl ᎦᎾᏄᎪᎬᎢ ᎾᏍᏋ "C").<ref>{{cite book | title=Please log in, or sign up for access | url=http://www.cjonline.com/stories/021704/pag_morsecode.shtml | accessdate=December 4 | accessyear=2005 }}</ref> ᎯᎠ ᎢᏤ ᎠᎦᏓᏅᏖᏗ ᎠᏛᏅᎢᏍᏔᏅ ᎠᏓᏅᏍᎬ [[electronic mail|electronic ᎪᏪᎵ ᏫᎦᏅᏅ]] ᏗᏓᏂᏴᏗ ᎾᎥᎢ Morse ᎠᏍᏓᏩᏛᏍᏙᏗ ᎠᎴ ᎨᏒᎢ ᎢᎦᏪᏛ ᎣᏂ ᏧᏩᎫᏛ ᎾᏍᎩ ᎨᏒᎢ ᎯᎠ ᎢᎬᏱ ᎠᏰᎵ ᎤᏒᎧᎵ ᎦᏟᏐᏗᎩ ᎯᎠ Morse ᎠᏫᏒᏗ ᎠᎦᏓᏅᏖᏗ ᎣᏂ ᏧᏩᎫᏛ [[World War I|ᎡᎶᎯ ᏓᏄᏩ ᎠᏯ]].
+ᎾᎿ ᎠᎾᏍᎬᏘ 24, 2004, ᎯᎠ 160th ᎤᏕᏘᏱᏍᎬ ᎯᎠ ᎢᎬᏱ ᎦᏣᏄᎳ ᏫᏓᏲᎯᏍᏗ, ᎯᎠ [[International Telecommunication Union|ITU]] ᎦᏟᏌᏅᎯ ᎯᎠ "@" (ᎯᎠ "[[commercial at|ᎠᏓᎾᏅᏗ ᎾᎾᎢ]]" ᎠᎴ "commat") ᎠᎦᏓᏅᏖᏗ ᎯᎠ Morse ᎠᎦᏓᏅᏖᏗ ᎠᏫᏒᏗ ᎠᎴ ᎨᏒᎢ ᎯᎠ ᎩᎶ ᏂᏓᏳᏅᏅ ᎪᏪᎵ "AC" (ᏄᏓᎷᎸᎾ ᎢᏯᏓᏛᏁᏗ "[T] C[OMMERCIAL]" ᎠᎴ ᎯᎠ ᎩᎶ ᏂᏓᏳᏅᏅ ᎪᏪᎵ "" ᎭᏫᎾᏗᏢ ᎯᎠ swirl ᎦᎾᏄᎪᎬᎢ ᎾᏍᏋ "C").<ref>{{cite book | title=Please log in, or sign up for access | url=http://www.cjonline.com/stories/021704/pag_morsecode.shtml | accessdate=ᎤᏍᎩᏱ 4 | accessyear=2005 }}</ref> ᎯᎠ ᎢᏤ ᎠᎦᏓᏅᏖᏗ ᎠᏛᏅᎢᏍᏔᏅ ᎠᏓᏅᏍᎬ [[electronic mail|electronic ᎪᏪᎵ ᏫᎦᏅᏅ]] ᏗᏓᏂᏴᏗ ᎾᎥᎢ Morse ᎠᏍᏓᏩᏛᏍᏙᏗ ᎠᎴ ᎨᏒᎢ ᎢᎦᏪᏛ ᎣᏂ ᏧᏩᎫᏛ ᎾᏍᎩ ᎨᏒᎢ ᎯᎠ ᎢᎬᏱ ᎠᏰᎵ ᎤᏒᎧᎵ ᎦᏟᏐᏗᎩ ᎯᎠ Morse ᎠᏫᏒᏗ ᎠᎦᏓᏅᏖᏗ ᎣᏂ ᏧᏩᎫᏛ [[World War I|ᎡᎶᎯ ᏓᏄᏩ ᎠᏯ]].
 
 == Morse ᎠᏍᏓᏩᏛᏍᏙᏗ ᏥᏄᏍᏗ assistive ᎠᏏᎾᏒᎢ ==
-Morse ᎠᏍᏓᏩᏛᏍᏙᏗ ᎤᎭ 21st ᏍᏉᎯᏧᏈ ᏧᏕᏘᏴᏗ ᎠᏛᏁᎵᏍᎩ ᎤᏍᏆᎸᎡᎲ ᏥᏄᏍᏗ [[assistive technology|assistive ᎠᏏᎾᏒᎢ]], ᎠᎵᏍᏕᎵᎭ ᏴᏫ ᎬᏙᏗ ᏧᏓᎴᏅᏓ ᎦᏟᏌᏅ [[disability|disabilities]] ᏗᏓᏛᎪᏔᏅ. Morse ᏰᎵᏇ ᎾᏍᏋ ᎠᏓᏅᏒ ᎾᎥᎢ ᎩᎶ ᎠᏏᏴᏫ ᎬᏙᏗ ᎤᎶᏒᏍᏔᏅᎯ ᎠᏌᎳᏙᏗ ᏰᎵ ᏄᎵᏂᎬᎬᎾ, ᏥᏄᏍᏗ ᎦᏅᎯᏓ ᏥᏄᏍᏗ ᎤᏅᏌ ᎤᎭ ᎢᎦᏛ minimal ᎠᏂᎩᏍᏗᏍᎩ ᎠᎨᏔᏗᏍᏗ. ᎭᏫᎾᏗᏢ ᎢᎦᏛ ᏕᎦᎸᏛ ᎧᏁᏌᎢ ᎪᎯ ᎤᏅᏔᏂᏓᏍᏗ ᎠᏓᏠᎯᏍᏗ ᎠᏦᏔᏍᎬ ᎾᎾᎯ ᎠᎴ ᏛᏓᏓᏂᎸᎬ ᎾᎿ ᏒᏃᏱ ᎡᎯ ᏅᏙ ᎠᏍᏚᎢᏍᎬ ("ᎠᏦᏔᏍᏗ ᎠᎴ ᎠᏍᏓᏩᏛᏍᏗ" interface). ᏴᏫ ᎬᏙᏗ ᎤᎶᏒᏍᏔᏅᎯ ᎠᏌᎳᏙᏗ disabilities ᎭᏫᎾᏗᏢ ᎦᏟᏐᏗᎩ ᎣᏓᏅᏛ disabilities (e.g. ᏴᏫ ᎦᎪ ᎠᎴ ᏧᎵᎡᎾ ᎠᎴ/ᎠᎴ ᏗᎨᏫ, ᎠᎴ ᎤᎭ ᎤᎶᏒᏍᏔᏅᎯ ᎠᏌᎳᏙᏗ disabilities) ᏰᎵᏇ ᎠᎩᏍᏗ Morse ᏗᎬᏩᎶᏒ ᎦᏁᎦ buzzer. ᎤᎾᏛᎯᏍᏔᏅ ᎠᎴ ᏰᎵ ᎠᏩᏛᏗ Ꮎ ᎠᎵᏍᎪᎸᏙᏗ ᎡᎵᏍ [[operating system|ᎠᏂᎩᏍᏗᏍᎬ ᎢᏯᏛᏁᎵᏓᏍᏗ]] ᎾᏍᏋ controlled  ᎾᎥᎢ Morse ᎠᏍᏓᏩᏛᏍᏙᏗ, ᎠᎵᏍᎪᎸᏙᏗ ᎯᎠ ᏗᎦᎴᏴᏗᏍᎩ ᎦᎷᎯᏍᏗ ᎯᎠ [[Internet|ᎧᎾᏁᏍ]] ᎠᎴ electronic ᎪᏪᎵ ᏫᎦᏅᏅ.  ''ᎠᎪᏩᏛᏗ:''  Morse2000 assistive ᏧᎾᏓᏛᎪᎳᏅ ᏄᏍᏗᏓᏅ<ref>{{cite book | title= Morse2000 assistive communications site | url=http://www.uwec.edu/ce/Morse2000.htm | accessdate=December 4 | accessyear=2005 }}</ref>  
+Morse ᎠᏍᏓᏩᏛᏍᏙᏗ ᎤᎭ 21st ᏍᏉᎯᏧᏈ ᏧᏕᏘᏴᏗ ᎠᏛᏁᎵᏍᎩ ᎤᏍᏆᎸᎡᎲ ᏥᏄᏍᏗ [[assistive technology|assistive ᎠᏏᎾᏒᎢ]], ᎠᎵᏍᏕᎵᎭ ᏴᏫ ᎬᏙᏗ ᏧᏓᎴᏅᏓ ᎦᏟᏌᏅ [[disability|disabilities]] ᏗᏓᏛᎪᏔᏅ. Morse ᏰᎵᏇ ᎾᏍᏋ ᎠᏓᏅᏒ ᎾᎥᎢ ᎩᎶ ᎠᏏᏴᏫ ᎬᏙᏗ ᎤᎶᏒᏍᏔᏅᎯ ᎠᏌᎳᏙᏗ ᏰᎵ ᏄᎵᏂᎬᎬᎾ, ᏥᏄᏍᏗ ᎦᏅᎯᏓ ᏥᏄᏍᏗ ᎤᏅᏌ ᎤᎭ ᎢᎦᏛ minimal ᎠᏂᎩᏍᏗᏍᎩ ᎠᎨᏔᏗᏍᏗ. ᎭᏫᎾᏗᏢ ᎢᎦᏛ ᏕᎦᎸᏛ ᎧᏁᏌᎢ ᎪᎯ ᎤᏅᏔᏂᏓᏍᏗ ᎠᏓᏠᎯᏍᏗ ᎠᏦᏔᏍᎬ ᎾᎾᎯ ᎠᎴ ᏛᏓᏓᏂᎸᎬ ᎾᎿ ᏒᏃᏱ ᎡᎯ ᏅᏙ ᎠᏍᏚᎢᏍᎬ ("ᎠᏦᏔᏍᏗ ᎠᎴ ᎠᏍᏓᏩᏛᏍᏗ" interface). ᏴᏫ ᎬᏙᏗ ᎤᎶᏒᏍᏔᏅᎯ ᎠᏌᎳᏙᏗ disabilities ᎭᏫᎾᏗᏢ ᎦᏟᏐᏗᎩ ᎣᏓᏅᏛ disabilities (e.g. ᏴᏫ ᎦᎪ ᎠᎴ ᏧᎵᎡᎾ ᎠᎴ/ᎠᎴ ᏗᎨᏫ, ᎠᎴ ᎤᎭ ᎤᎶᏒᏍᏔᏅᎯ ᎠᏌᎳᏙᏗ disabilities) ᏰᎵᏇ ᎠᎩᏍᏗ Morse ᏗᎬᏩᎶᏒ ᎦᏁᎦ buzzer. ᎤᎾᏛᎯᏍᏔᏅ ᎠᎴ ᏰᎵ ᎠᏩᏛᏗ Ꮎ ᎠᎵᏍᎪᎸᏙᏗ ᎡᎵᏍ [[operating system|ᎠᏂᎩᏍᏗᏍᎬ ᎢᏯᏛᏁᎵᏓᏍᏗ]] ᎾᏍᏋ controlled  ᎾᎥᎢ Morse ᎠᏍᏓᏩᏛᏍᏙᏗ, ᎠᎵᏍᎪᎸᏙᏗ ᎯᎠ ᏗᎦᎴᏴᏗᏍᎩ ᎦᎷᎯᏍᏗ ᎯᎠ [[Internet|ᎧᎾᏁᏍ]] ᎠᎴ electronic ᎪᏪᎵ ᏫᎦᏅᏅ.  ''ᎠᎪᏩᏛᏗ:''  Morse2000 assistive ᏧᎾᏓᏛᎪᎳᏅ ᏄᏍᏗᏓᏅ<ref>{{cite book | title= Morse2000 assistive communications site | url=http://www.uwec.edu/ce/Morse2000.htm | accessdate=ᎤᏍᎩᏱ 4 | accessyear=2005 }}</ref>  
 
 ᎭᏫᎾᏗᏢ ᏌᏊ ᎦᎸᏛ ᎧᏁᏌᎢ ᎬᏂᎨᏒ ᎢᎬᏁᎸ ᎭᏫᎾᏗᏢ ᎯᎠ ᎦᏬᏂᏍᎩ ᎠᎴᏂᏍᎩ ᎪᏪᎵ ᏗᎪᎵᏰᏗ ''QST'' ᎠᎦᏴᎵ shipboard ᎦᏬᏂᏍᎩ ᎠᏅᏬᏗ ᎦᎪ ᎠᏰᎲ [[stroke|ᎬᏂᎸᎯ]] ᎠᎴ ᎤᎴᎾᎯᏛ ᎯᎠ ᏅᏏᎾᏒ ᎧᏁᎬ ᎠᎴ ᎪᏪᎶᏗ ᏥᏄᏍᏛᎩ ᏰᎵᏆ ᎢᏯᏛᏁᏗ ᏗᏓᏛᎪᏔᏅ ᎬᏙᏗ ᎤᏤᎵ ᎦᎾᎦᏗ (ᎦᏬᏂᏍᎩ ᎠᎴᏂᏍᎩ) ᎾᎥᎢ ᎠᏓᎦᏔᏍᏓᏁᎲ ᎤᏤᎵ ᏗᎦᏙᎵ ᎭᏫᎾᏗᏢ Morse.  ᎤᏟ ᎢᏲᏍᏛ ᎦᎫᏍᏛᏅᎯ ᎦᎸᏛ ᎧᏁᏌᎢ ᏄᎵᏍᏔᏅᎩ ᎭᏫᎾᏗᏢ 1966 ᎯᎳᎪ ᎢᏳ [[prisoner of war|ᎠᎱᏥ  ᏓᏄᏩ]] [[Jeremiah Denton]], ᎠᏲᎸᎯ ᎾᎿ television ᎾᎥᎢ ᎤᏤᎵ ᎤᏴᏢ Vietnamese ᎠᎩᏍᎬᎢ, Morse-blinked ᎯᎠ ᎧᏁᏨ ᎠᏓᎩᎵᏲᏍᏙᏗ.
 
