--- a/ᎢᏅᏗᎾ.mw
+++ b/ᎢᏅᏗᎾ.mw
@@ -79,3 +79,217 @@
 
 [[Category:ᏓᎶᏂᎦᏍᏛ]]
 [[Category:ᎠᏰᎵ ᏚᎾᏙᏢᏩᏗᏒ]]
+
+[[ace:India]]
+[[af:Indië]]
+[[als:Indien]]
+[[am:ህንድ]]
+[[ang:Indea]]
+[[ar:الهند]]
+[[an:India]]
+[[arc:ܗܢܕܘ]]
+[[roa-rup:India]]
+[[frp:Ende]]
+[[as:ভাৰত]]
+[[ast:India]]
+[[ay:Indya]]
+[[az:Hindistan]]
+[[bn:ভারত]]
+[[zh-min-nan:Ìn-tō͘]]
+[[map-bms:India]]
+[[ba:Һиндостан]]
+[[be:Індыя]]
+[[be-x-old:Індыя]]
+[[bh:भारत]]
+[[bcl:Indya]]
+[[bi:India]]
+[[bo:རྒྱ་གར།]]
+[[bs:Indija]]
+[[br:India]]
+[[bg:Индия]]
+[[ca:Índia]]
+[[cv:Инди]]
+[[ceb:Indya]]
+[[cs:Indie]]
+[[cbk-zam:India]]
+[[co:India]]
+[[cy:India]]
+[[da:Indien]]
+[[de:Indien]]
+[[dv:އިންޑިޔާ]]
+[[nv:Tó Honániʼdę́ę́ʼ Bitsį́ʼ Yishtłizhii Bikéyah]]
+[[dsb:Indiska]]
+[[dz:རྒྱ་གར་]]
+[[et:India]]
+[[el:Ινδία]]
+[[en:India]]
+[[es:India]]
+[[eo:Barato]]
+[[ext:La Índia]]
+[[eu:India]]
+[[ee:India]]
+[[fa:هند]]
+[[hif:India]]
+[[fo:India]]
+[[fr:Inde]]
+[[fy:Yndia]]
+[[fur:Indie]]
+[[ga:An India]]
+[[gv:Yn Injey]]
+[[gd:Na h-Innseachan]]
+[[gl:India - भारत]]
+[[gan:印度]]
+[[glk:هند]]
+[[gu:ભારત]]
+[[got:𐌹𐌽𐌳𐌹𐌰]]
+[[hak:Yin-thu]]
+[[xal:Энедигин Орн]]
+[[ko:인도]]
+[[ha:Indiya]]
+[[haw:‘Īnia]]
+[[hy:Հնդկաստան]]
+[[hi:भारत]]
+[[hsb:Indiska]]
+[[hr:Indija]]
+[[io:India]]
+[[ig:Ndia]]
+[[ilo:India]]
+[[bpy:ভারত]]
+[[id:India]]
+[[ia:India]]
+[[ie:India]]
+[[iu:ᐃᓐᑎᐊ/intia]]
+[[os:Инди]]
+[[is:Indland]]
+[[it:India]]
+[[he:הודו]]
+[[jv:India]]
+[[kn:ಭಾರತ]]
+[[pam:India]]
+[[krc:Индия]]
+[[ka:ინდოეთი]]
+[[ks:ہِندوستان]]
+[[csb:Indie]]
+[[kk:Үндістан]]
+[[kw:Eynda]]
+[[rw:Ubuhinde]]
+[[ky:Индия]]
+[[rn:Ubuhindi]]
+[[sw:Uhindi]]
+[[kv:Индия]]
+[[kg:India]]
+[[ht:End]]
+[[ku:Hindistan]]
+[[la:India]]
+[[lv:Indija]]
+[[lb:Indien]]
+[[lt:Indija]]
+[[lij:India]]
+[[li:India]]
+[[ln:India]]
+[[jbo:xingu'e]]
+[[lmo:India]]
+[[hu:India]]
+[[mk:Индија]]
+[[mg:India]]
+[[ml:ഇന്ത്യ]]
+[[mt:Indja]]
+[[mi:Īnia]]
+[[mr:भारत]]
+[[arz:الهند]]
+[[mzn:هند]]
+[[ms:India]]
+[[mwl:Índia]]
+[[mdf:Индие]]
+[[mn:Энэтхэг]]
+[[my:အိန္ဒိယနိုင်ငံ]]
+[[nah:India]]
+[[na:Indjiya]]
+[[nl:India]]
+[[nds-nl:India]]
+[[ne:भारत]]
+[[new:भारत]]
+[[ja:インド]]
+[[nap:Innia]]
+[[pih:Endya]]
+[[no:India]]
+[[nn:India]]
+[[nrm:Înde]]
+[[nov:India]]
+[[oc:Índia]]
+[[or:ଭାରତ]]
+[[uz:Hindiston]]
+[[pa:ਭਾਰਤ]]
+[[pi:भारत]]
+[[pnb:ھندستان]]
+[[pap:India]]
+[[ps:هند]]
+[[km:ឥណ្ឌា]]
+[[pcd:Inde]]
+[[pms:India]]
+[[tpi:India]]
+[[nds:Indien]]
+[[pl:Indie]]
+[[pt:Índia]]
+[[crh:İndistan]]
+[[ty:’Inītia]]
+[[ksh:Inndije]]
+[[ro:India]]
+[[rmy:Bharat]]
+[[rm:India]]
+[[qu:Indya]]
+[[ru:Индия]]
+[[sah:Индия]]
+[[se:India]]
+[[sm:Igitia]]
+[[sa:भारतम्]]
+[[sc:Ìndia]]
+[[sco:Indie]]
+[[stq:Indien]]
+[[sq:India]]
+[[scn:Innia]]
+[[si:භාරත ජනරජය]]
+[[simple:India]]
+[[sd:ڀارت]]
+[[ss:INdiya]]
+[[sk:India]]
+[[sl:Indija]]
+[[szl:Indyje]]
+[[so:Hindiya]]
+[[sr:Индија]]
+[[sh:Indija]]
+[[su:India]]
+[[fi:Intia]]
+[[sv:Indien]]
+[[tl:India]]
+[[ta:இந்தியா]]
+[[tt:Hindstan]]
+[[te:భారత దేశము]]
+[[tet:Índia]]
+[[th:ประเทศอินเดีย]]
+[[tg:Ҳиндустон]]
+[[to:ʻInitia]]
+[[tr:Hindistan]]
+[[tk:Hindistan]]
+[[udm:Индия]]
+[[uk:Індія]]
+[[ur:بھارت]]
+[[ug:ھىندىستان]]
+[[za:Yaenqdoq]]
+[[vec:India]]
+[[vi:Ấn Độ]]
+[[vo:Lindän]]
+[[fiu-vro:India]]
+[[wa:Inde]]
+[[zh-classical:印度]]
+[[war:Indya]]
+[[wo:End]]
+[[wuu:印度]]
+[[ts:India]]
+[[yi:אינדיע]]
+[[yo:Índíà]]
+[[zh-yue:印度]]
+[[diq:Hindıstan]]
+[[bat-smg:Indėjė]]
+[[zh:印度]]
+[[bjn:India]]
