--- a/ᎪᏪᎵ.mw
+++ b/ᎪᏪᎵ.mw
@@ -150,9 +150,8 @@
 * [http://librariesaustralia.nla.gov.au Libraries Australia] - ᎪᎱᏍᏗ ᎠᏓᏅᏍᏙᏗ ᏗᎪᏪᎵ ᎭᏫᎾᏗᏢ 800+ Australian libraries
 * [http://www.bookdesignonline.com Book Design Tips] - ᎠᏕᎶᏆᏍᏗ ᎯᎳᎪ ᎠᏤᎸ ᎢᎬᏁᏗ ᏗᎪᏪᎵ ᎬᏙᏗ ᎾᏍᎩ ᎯᎠ ᎠᎦᏚᏕᏍᏗ, tutorials ᎠᎴ ᎯᎸᏍᎩ ᏗᏟᎶᏍᏙᏗ. 
 
-[[Category:Books|*]]
-[[Category:Documents]]
-[[Category:Paper products]]
+[[Category:ᏗᎪᏪᎵ| ]]
+[[Category:ᏗᏛᎪᏔᏅ]]
 
 [[af:Boek]]
 [[an:Libro]]
