--- a/ᎩᎵᏏ_ᎦᏬᏂᎯᏍᏗ.mw
+++ b/ᎩᎵᏏ_ᎦᏬᏂᎯᏍᏗ.mw
@@ -1,4 +1,4 @@
-[[File:Masterpieces.jpg|thumb|ᏴᏭᏁᎦ ᏗᎪᏪᎵ]]
+[[File:Masterpieces.jpg|thumb|ᏴᏭᏁᎦ [[ᏗᎪᏪᎵ]]]]
 '''ᎩᎵᏏ''' ('''ᏴᏭᏁᎦ''') [[ᎦᏬᏂᎯᏍᏗ]]. ᎩᎵᏏᏃ ᎦᏬᏂᎯᏍᏗ ᎠᏰᎵ ᎤᏒᎧᎵ [[ᎠᎺᎢ]], ᎩᎵᏏ, [[ᎠᎤᏍᏞᎢᏯ]], ᎠᎴ ᎠᏂᏐᎢ.
 
 == ᏙᏯᏗᏢ ᏗᏕᎬᏔᏛ ==
